테스트코드 공부

--- a/자바와 JUnit을 활용한 실용주의 단위테스트/단위테스트.md
+++ b/자바와 JUnit을 활용한 실용주의 단위테스트/단위테스트.md
@@ -36,3 +36,43 @@ getBalance() - 잔액확인
 - makeMultipleWithdrawls : 
 
 ```
+
+
+## AAA테스트
+
+- 준비(Arange) 
+    - 테스트 코드를 실행하기전에 시스템이 적절한 상태에 있는지 확인
+    - 객체들을 생성하거나 이것과 의사소통 하거나 다른 API를 호출하는 것등의 역할을 한다.
+    - 드물지만 시스템이 우리가 필요한 상태로 있다면 준비 상태를 생략
+
+- 실행(Act)
+    - 테스트 코드를 실행합니다. 보통은 단일 메서드를 호출
+
+- 단언(Assert)
+    - 실행한 코드가 기대한 대로 동작하느지 확인
+    - 실행한 코드의 반환값 혹은 그 외 필요한 객체들의 새로운 상태를 검사합니다.
+    
+
+
+## 일관성 있는 이름으로 테스트 문서화
+
+- 어떤 맥락에서 일련의 행동을 호출했을 때 어떤 결과가 나오는지를 명시해야한다
+- 주요 목표는 테스트코드를 다른사람에게 의미 있게 만드는 것입니다.
+
+ex)
+```
+makeSingleWithdrawal
+    -> withdrwalReducesBalanceByWithdrawnAmount
+
+attemptToWithdrawTooMuch
+    -> withdrawlaofMoreThanAvailableFundsGeneratesError
+
+multipleDeposits
+    -> multipleDepositsIncreaseBalanceBySumOfDeposits
+```
+
+- 양식 
+    - doingSomeOperationGeneratesSomeResult(어떤 동작을 하면 어떤 결과가 나온다)
+
+    - someResultOccursUnderSomeCondition(어떤 결과는 어떤 조건에서 발생한다.)
+
