Controller Advice 공부

--- a/자바와 JUnit을 활용한 실용주의 단위테스트/단위테스트.md
+++ b/자바와 JUnit을 활용한 실용주의 단위테스트/단위테스트.md
@@ -183,3 +183,58 @@ P: 성능 조건(performance characteristics)은 기준에 부합하는가?
     - 최적화를 하기 전에 먼저 기준점으로 단지 현재 경과 시간을 측정하는 성능 테스트를 작성해야한다.
 
     - 성능이 핵심 고려 사항이라면 단위 테스트보다는 좀 더 고수준에서 문제에 집중하고 싶을 것이고, JMeter같은 도구를 사용하길 원할 수도 있습니다.
+
+
+
+
+## Custmo Exception Handling 
+
+- https://www.baeldung.com/exception-handling-for-rest-with-spring 공부내용정리
+
+-  Spring5는 RestAPI 에서 기본 오류 처리를 위한 빠른 방법인 Response Status Exception 클래스를 도입했다.
+
+
+
+### Solution 1 - the Controller - level 
+
+- 첫번 째. @Controller단에서 작업한다.
+
+```java
+public class yushinController{
+    
+    //api작성
+    
+    @ExceptionHandler({CustomException.class,CustomException2.class})
+    public void handleException(){
+        //내용
+    }
+}
+
+```
+
+- 단점
+    - @ExceptionHandler에 표시된 메소드들은 오직 특정 컨트롤러에만 반응한다
+
+
+### ResponseStatusException(Spring5이상)
+
+
+```java
+
+@Getmapping(value ="/{id}")
+public foo findById(@PathVariable("id") Long id,HttpServeletResponse response){
+    try{
+        Foo resourceById = RestPreconditions.checkFound(service.findOne(id));
+
+        eventPublisher.publishEvent(new SingleResourceRestrievedEvent(this,response));
+
+        return resourceById;
+    }
+    catch(MyResourceNotFoundException exc){
+        throw new ResponseStatusException(HttpStatus.NOT_FOUND,"Foo Not Found",exc);
+    })
+}
+
+```
+
+
