--- a/자바와 JUnit을 활용한 실용주의 단위테스트/단위테스트.md
+++ b/자바와 JUnit을 활용한 실용주의 단위테스트/단위테스트.md
@@ -187,7 +187,7 @@ P: 성능 조건(performance characteristics)은 기준에 부합하는가?
 
 
 
-## Custmo Exception Handling 
+## Custom Exception Handling 
 
 - https://www.baeldung.com/exception-handling-for-rest-with-spring 공부내용정리
 
