--- a/자바와 JUnit을 활용한 실용주의 단위테스트/단위테스트.md
+++ b/자바와 JUnit을 활용한 실용주의 단위테스트/단위테스트.md
@@ -187,7 +187,7 @@ P: 성능 조건(performance characteristics)은 기준에 부합하는가?
 
 
 
-## Custom Exception Handling 
+## Custmo Exception Handling 
 
 - https://www.baeldung.com/exception-handling-for-rest-with-spring 공부내용정리
 
@@ -237,4 +237,20 @@ public foo findById(@PathVariable("id") Long id,HttpServeletResponse response){
 
 ```
 
+ResponseStatusException 이점
+
+- 프로토타이핑에 탁월함: 기본 솔루션을 매우 빠르게 구현할 수 있다.
+
+- 하나의 유형 여러 상태코드 하나의 예외 유형이 여러 다른 응답으로 이어질 수 있다.(ExceptionHandler에 비해 긴밀한 결합을 줄입니다)
+
+- 사용자 정의 예외 클래스를 많이 만들필요가 없다.
+
+
+- 단점
+    - 예외 처리에 대한 통일된 방법이 없다
+    전역 접근 방식을 제공하는 @ControllerAdvice와 달리 일부 응용 프로그램 전체 규칙을 적용하는 것이 더어렵다. 
+    - 코드 복제: 여러 컨트롤러에서 코드를 복제할 수 있다.
+
+
+- ControllerAdvice로 전역 설정한 뒤 ResponseStatusException으로 로컬설정하기
 
