--- a/Java/모던인자바/1장/1장.md
+++ b/Java/모던인자바/1장/1장.md
@@ -1,67 +1,61 @@
-# 1장
+# 1장 
 
-## 기본 개념
-### 스트림
+## 자바가 변하는 이유
+- 우리는 시공을 초월하는 완벽한 언어를 원하지만 현실적으로 그런 언어는 존재하지 않으며 모든 언어가 장단점을 갖고 있다.
 
-- 스트림이란 한 번에 한 개씩 만들어지는 연속적인 데이터 항목들의 모임
-- 스트림 API는 파이프라인을 만드는 데 필요한 많은 메서드를 제공한다.
-- 스트림API의 핵심은 기존에는 한 번에 한 항목을 처리했지만 이제 자바8에서는 우리가 하려는 작업을 고수준으로 추상화해서 일련의 스트림으로 만들어 처리 할 수 있다는 것이다.
+- 특정 분야에서 장점을 가진 언어는 다른 경쟁 언어를 도태시킨다.
 
-- 스트림 파이프라인을 이용해서 입력 부분을 여러 CPU코어에 쉽게 할당할 수 있다는 부가적인 이득도 얻을 수 있다.
-- 스레드라는 복잡한 작업을 사용하지 않으면서도 공짜로 병렬성을 얻을 수 있다.
+## 프로그래밍 언어 생태계에서 자바의 위치
 
+- 코드를 JVM바이트 코드로 컴파일하는 특징(모든 브라우저에서 가상 머신 코드를 지원한다)때문에 자바는 인터넷 애플릿 프로그램의 주요 언어가 된다.
 
-### 동작 파라미터화로 메서드에 코드 전달하기
+- 자바 모델과 자바 코드 애플릿을 안전하게 실행할 수 있었던 초기 브라우저 덕분에 자바가 대학으로 깊숙이 자리 잡을 수 있었고, 많은 사람들이 자바를 사용하기 시작했다. (대중적)
 
-- 자바 8에서는 메서드를 다른 메서드의 인수로 넘겨주는 기능을 제공한다. 이러한 기능을 동작 파라미터화라고 부른다.
+- 객체 지향은 2가지 이유로 각광을 받았다.
+    - 캡슐화 덕분에 C에 비해 소프트웨어 엔지니어링적인 문제가 훨씬 적다
+    - 객체지향의 정신적인 모델 덕분에 윈도우 95 및 그 이후의 WIMP프로그래밍 모델에 쉽게 대응할 수 있다는 사실
+        ``` 
+        WIMP는 웹 서버를 운영하는 데 자주 사용되는 소프트웨어 모음으로 다음을 가리킨다.
 
-- 스트림  API는 연산의 동작을 파라미터화할 수 있는 코드를 전달한다는 사상에 기초되어있다.
-
-
-### 병렬성과 공유 가변 데이터
-- 자바8 에서는 병렬성을 공짜로 얻을 수 있다.
-- 스트름 메서드로 전달하는 코드의 동작 방식을 조금 바꿔야한다는 단점이 있다.
-
-- 스트림 메서드로 전달하는 코드는 다른 코드와 동시에 실행하더라도 안전하게 실행 될 수 있어야 한다.
-    - 보통 다른 코드와 동시에 실행하더라도 안전하게 실행할 수 있는 코드를 만들려면 공유된 가변 데이터에 접근하지 않아야 한다.
+        Windows - 운영 체제
+        IIS - 웹 서버
+        MySQL 또는 MSSQL - DBMS
+        PHP 또는 Perl 또는 Python - 프로그래밍 언어
+        ```
 
 
+## 자바8이 등장한 배경
 
-### 일급객체
+- 자바8에서는 많은 변화가 일어났다. 그 원인들을 파악하고 알아두자.
+1. 멀티코어 CPU 대중화와 같은 하드웨어적인 변화가 자바8에 영향을 미쳤다.
+    - 대부분의 자바 프로그램은 코어 중 하나만을 사용했다.
+    
+    - 자바 8이전에도 이문제를 해결하기 위해 스레드를 사용하는 방안을 내놓았지만, 스레드를 사용하면 관리하기 어렵고 많은 문제가 발생할 수 있다는 단점이 있다.
 
-- 변수나 데이터에 할당할 수 있어야 한다.
-- 객체의 인자로 넘길 수 있어야 한다.
-- 객체의 리턴 값으로 리턴할 수 있어야 한다.
+    - 자바는 이러한 병렬 실행 환경을 쉽게 관리하고 에러가 덜 발생하는 방향으로 진화하려 노력한 결과 자바8이 등장했다.
+
+2. 프로그래머는 빅데이터라는 도전에 직면하면서 멀티코어 컴퓨터나 컴퓨터 클러스터를 이용해서 빅데이터를 효과적으로 처리할 필요성이 커졌다.
 
 
-- 자바 8이전에는 메서드는 일급 시민이 아니였지만, 지금은 일급 시민이다.
+3. 자바8은 간결한코드, 멀티코어 프로세서의 쉬운 활용이라는 두 가지 요구사항을 기반으로 한다.
+
+- 자바8에서 등장한 새로운 기술
+    ```
+    1. 스트림API
+    2. 메서드에 코드를 전달하는 기법
+    3. 인터페이스의 디폴트 메서드
+    ```
+4. 외부에서 큰 하위시스템 컴포넌트를 추가하고 다른 벤더가 만든 컴포넌트를 이용해 개발하는 사례가 늘어나고 있다.
 
 
-### 프레디케이트
+### 스트림 API
 
-- 수학에서는 인수로 값을 받아 true나 false를 반환하는 함수를 프레디케이트라고 한다.
+- 자바8은 데이터베이스 질의 언어에서 표현식을 처리하는 것처럼 병렬 연산을 지원하는 스트림이라는 새로운 API를 제공한다.
 
-```java
-public static boolean isHeavyApple(Apple apple){
-    return apple.getWeight() > 150;
-}
+    - 데이터베이스 질의 언어에서 고수준 언어로 원하는 동작을 표현하면, 구현(자바에서는 스트림 라이브러리가 이 역할을 수행)에서 최적의 저수준 실행 방법을 선택하는 방식으로 동작한다.
 
-public static boolean isGreenApple(Apple apple){
-    return GREEN.equals(apple.getColor());
-}
+    - 멀티코어 CPI를 이용하는 것 보다 비용이 훨씬 비싼 키워드 synchronized를 사용하지 않아도 된다.
+    
+- 스트림 API을 활용하면 메서드에 코드를 전달하는 간결 기법, 디폴트 메서드가 존재 할 수 있음을 알 수 있다.
 
-public interface Predicate<T>{
-    boolean test(T t);
-}
 
-static List<Apple> filterApples(List<Apple> inventory, Predicate<Apple> p){
-    List<Apple> result = new ArrayList<>();
-
-    for (Apple apple:inventory){
-        if(p.test(apple)){
-            result.add(apple);
-        }
-    }
-    return apple;
-}
-```
