--- a/Java/모던인자바/1장/1장.md
+++ b/Java/모던인자바/1장/1장.md
@@ -54,8 +54,40 @@
 
     - 데이터베이스 질의 언어에서 고수준 언어로 원하는 동작을 표현하면, 구현(자바에서는 스트림 라이브러리가 이 역할을 수행)에서 최적의 저수준 실행 방법을 선택하는 방식으로 동작한다.
 
-    - 멀티코어 CPI를 이용하는 것 보다 비용이 훨씬 비싼 키워드 synchronized를 사용하지 않아도 된다.
+    - 멀티코어 CPU를 이용하는 것 보다 비용이 훨씬 비싼 키워드 synchronized를 사용하지 않아도 된다.
     
 - 스트림 API을 활용하면 메서드에 코드를 전달하는 간결 기법, 디폴트 메서드가 존재 할 수 있음을 알 수 있다.
 
+
+
+## 자바8 설계의 밑바탕을 이루는 세 가지 프로그래밍 개념 
+
+
+### 스트림 처리
+
+- 스트림이란 한 번에 한 개 씩 만들어지는 연속적인 데이터 항목들의 모임
+
+- 스트림처리 : 스트림의 행동을 병렬 처리할 수 있다.
+
+- 스트림API는 파이프 라인을 만드는 데 필요한 많은 메서드를 제공한다.
+    - 유닉스  || 을 의미
+
+- 스트림 API의 핵심은 기존에는 한 번에 한 항목을 처리 했지만, 자바8 에서는 우리가 하려는 작업을 고수준으로 추상화해서 일련의 스트림으로 만들어 처리 할 수 있다는 것이다.
+
+- 스레드라는 복잡한 작업을 사용하지 않으면서도 병렬성도 공짜로 얻을 수 있다.
+
+### 동작 파라미터화로 메서드에 코드 전달하기
+
+- 자바8에서는 메서드를 다른 메서드의 인수로 넘겨주는 기능을 제공한다.(동작파라미터화)
+
+- 스트림 API는 연산의 동작을 파라미터화 할수 잇는 코드를 전달한다는 사상을 갖고 있다.
+
+
+### 병렬성과 공유 가변 데이터
+
+- 병렬성얻기 위해서는 스트림 메서드로 전달하는 코드의 동작 방식을 조금 바꿔야 한다.
+
+- 스트림 메서드로 전달하는 코드는 다른 코드와 동시에 실행하더라도 안전하게 실행될 수 있어야 한다.
+
+- 보통 다른 코드와 동시에 실행하더라도 안전하게 실행할 수 있는 코드를 만들려면 공유된 가변 데이터에 접근하지 않아야 한다.
 
