깃 협업방법

--- a/기타.md
+++ b/기타.md
@@ -15,6 +15,11 @@
 
 ### IP 
  - IT 환경의 주소체계
+ - 인터넷에 연결되어 있는 모든 장치들을 식별할 수 있도록 각각 장비에게 부여되는 고유주소이다.
  
 
 
+
+## 포트포워딩
+- 외부 IP를 통해 접속한 클라이언트가 특정 포트를 통해 요청을하면 , 
+    하나의 내부IP가 해당 요청을 처리하도록 포워드 하는 것이 포트포워딩이다.
