--- a/기타.md
+++ b/기타.md
@@ -23,3 +23,16 @@
 ## 포트포워딩
 - 외부 IP를 통해 접속한 클라이언트가 특정 포트를 통해 요청을하면 , 
     하나의 내부IP가 해당 요청을 처리하도록 포워드 하는 것이 포트포워딩이다.
+
+
+## OS 
+- OS란 windows, mac과 같이 컴퓨터를 실행하거나 동작하는데 있어서 자원을 분배하고, 작업 순서를 정하는 등 기능을 수행한다. 리눅스 역시 윈도우와 맥과 같은 운영체제의 한 종류이다.
+
+- 리눅스를 많이 사용하는 이유?
+     - 자유 라이센스 
+     - 모든 소스가 공개되어 있어 운영체제를 설치하고 이용하는데 비용이 들지 않는다.
+     - 오픈소스이므로 취약점에 노출 되어도 비교적 빠른 보안 업데이트가 가능하다.
+
+## 서브도메인
+
+## 리다이랙선
