[add] 서브도메은, 리디렉션

--- a/기타.md
+++ b/기타.md
@@ -34,5 +34,15 @@
      - 오픈소스이므로 취약점에 노출 되어도 비교적 빠른 보안 업데이트가 가능하다.
 
 ## 서브도메인
+ - 도메인의 보조적인 역할을 하고 있다
+     ```
+     yushin.kr // 운영서버
+     adminc.yushin.kr // 어드민서버 , 서브도메인
+     ```
+- 서브도메인을 도메인을 나누어서 관리할 때 유용하다.
+
+
 
 ## 리다이랙선
+- 요청을 다른 요청으로 넘길 때 유용하다,
+- 권한이 없느 회원의 요청일 경우 홈페이지로 돌려보낼 때와 같이 사용자의 요청을 우회시킬 때 사용한다
