--- a/기타.md
+++ b/기타.md
@@ -46,3 +46,16 @@
 ## 리다이랙선
 - 요청을 다른 요청으로 넘길 때 유용하다,
 - 권한이 없느 회원의 요청일 경우 홈페이지로 돌려보낼 때와 같이 사용자의 요청을 우회시킬 때 사용한다
+
+## 자바언어 장단점
+- 장점:
+     - 운영체제에 독립적이다.
+          - JVM에서 동작하기 때문에, 특정 운영체제에 종속되지 않는다.
+          - 객체 지향 언어이다.
+               - 객체지향적으로 프로그래밍 하기 위해 여러 언어적 자원을 하고 있따.
+               - 캡슐화, 상속, 추상화 , 다형성
+
+          - 자동으로 메모리를 관리해준다
+               - JVM에서 Garbage Collector라고 불리는 데몬 쓰레드에 의해 Garbage Collection이 일어난다 . GC로인해 별도의 메모리 관리가 필요 없으며 비즈니스 로직에 집중할 수 있다.
+          - 멀티스레드를 쉽게 구현할 수 있다.
+          - 동적 로딩을 지원한다
