[add] 자바 기술면접 대비

--- a/기타.md
+++ b/기타.md
@@ -51,11 +51,61 @@
 - 장점:
      - 운영체제에 독립적이다.
           - JVM에서 동작하기 때문에, 특정 운영체제에 종속되지 않는다.
-          - 객체 지향 언어이다.
-               - 객체지향적으로 프로그래밍 하기 위해 여러 언어적 자원을 하고 있따.
-               - 캡슐화, 상속, 추상화 , 다형성
+     - 객체 지향 언어이다.
+          - 객체지향적으로 프로그래밍 하기 위해 여러 언어적 자원을 하고 있따.
+          - 캡슐화, 상속, 추상화 , 다형성
 
-          - 자동으로 메모리를 관리해준다
-               - JVM에서 Garbage Collector라고 불리는 데몬 쓰레드에 의해 Garbage Collection이 일어난다 . GC로인해 별도의 메모리 관리가 필요 없으며 비즈니스 로직에 집중할 수 있다.
-          - 멀티스레드를 쉽게 구현할 수 있다.
-          - 동적 로딩을 지원한다
+     - 자동으로 메모리를 관리해준다
+          - JVM에서 Garbage Collector라고 불리는 데몬 쓰레드에 의해 Garbage Collection이 일어난다 . GC로인해 별도의 메모리 관리가 필요 없으며 비즈니스 로직에 집중할 수 있다.
+     - 멀티스레드를 쉽게 구현할 수 있다.
+     - 동적 로딩을 지원한다
+
+## OOP(객체 지향 프로그래밍)
+- OOP(Object-Oriented Programming)
+- 데이터를 객체로 취급하여 프로그램에 반영한 것이며, 순차적으로 프로그램이 동작하는 기존의 것들과는 다르게 객체와 객체의 상호작용을 통해 프로그램이 동작하는 것을 말한다.
+
+- 특징   
+     - 객체지향 프로그래밍은 코드 재사용성이 높다.
+     - 코드의 변경이 용이
+     - 직관적인 코드 분석
+     - 개발속도 향상
+     - 상속을 통한 장점 극대화
+
+## Object
+- OOP에서 데이터변수와 그 데이터 관련되는 동적 함수 즉 절차 방법 기능을 모두 포함한 개념
+
+## Overloading vs Overriding
+- Overloading
+     - 같은 이름의 메소드를 여러 개 정의 하는것
+     - 매개 변수의 타입이 다르거나 개수가 달라야 한다.
+     - Return type과 접근 제어자는 영향을 주지 않음
+
+- Overriding(오버라이딩)
+     - 상속에서 나온 개념
+     - 상위 클래스의 메소드를 하위 클래스에서 재정의
+
+## JDBC
+- Java Data Base Connection의 약자로 Java언어를 통해 데이터베이스에서 접근할 수 있는 프로그래밍
+
+## Interface,Abstract
+
+- interface
+     - 일종의 추상 클래스
+     - 오직 추상메서드와 상수만을 멤버로 갖는다.
+     - Implements키워드를 사용
+     - 상속의 관계가 없는 클래스간 서로 공동되는 로직을 구현하여 쓸 수 있도록 한다.
+     - Extends는 하나의 클래스만 상속 가능하나 Interface는 다중 상속이 가능하다.
+
+- Abstract
+     - 추상메서드를 하나 이상 가진 클래스
+     - 자신의 생성자로 객체 생성 불가능
+     - 하위 클래스를 참조하여 상위 클래스의 객체를 생성
+     - 하위 클래스를 제어하기 위해 사용
+
+## Static
+
+- 클래스가 로딩될 때 메모리 공간을 할당하는데 처음 설정된 메모리 공간이 변하지 않음을 의미
+- 객체를 아무리 많이 만들어도 해당 변수는 하나만 존재
+
+## Garbage Collection(가비지 컬렉션)
+- 시스템에서 더 이상 사용하지 안흔 ㄴ동적 할당도니 메모리 블록을 찾아 자동으로 다시 사용 가능한 자원으로 회수 하는 것.
