--- a/기타.md
+++ b/기타.md
@@ -108,4 +108,45 @@
 - 객체를 아무리 많이 만들어도 해당 변수는 하나만 존재
 
 ## Garbage Collection(가비지 컬렉션)
-- 시스템에서 더 이상 사용하지 안흔 ㄴ동적 할당도니 메모리 블록을 찾아 자동으로 다시 사용 가능한 자원으로 회수 하는 것.
+- 시스템에서 더 이상 사용하지 않는 동적 할당도니 메모리 블록을 찾아 자동으로 다시 사용 가능한 자원으로 회수 하는 것.
+- 자바는 명시적으로 불피요한 데이터를 표현하기 위해서 일반적으로 null을 선언해준다.
+- java나 Kotlin에서는 이러한 메모리 누수를 방지하기 위해 가비지 컬렉터가 주기적으로 검사하여 메모리를 청소해준다.
+
+- Minor Gc와 Major Gc
+     - JVM의 Heap영역은 처음 설계될 때 다음의 2가지를 전제로 설계 되었다.
+          - 대부분의 객체는 금방 접근 불가능한 상태(Unreachable)이 된다.
+          - 오래된 객체에서 새로운 객체로의 참조는 아주 적게 존재한다.
+     - 객체는 대부분 일회성되며, 메모리에 오랫동안 남아있는 경우는 드물다.
+     - 객체의 생존 기간에 따라 물리적인 Heap영역을 나눈다.
+          - Young 영역
+               - 새롭게 생성된 객체가 할당되는 영역
+               - 대부분의 객체가 금방 Unreachable 상태가 되기 때문에, 많은 객체가 Young 영역에 생성되었다가 사라진다.
+               - Young영역에 대한 가비지 컬렉션을 Minor GC라고 부른다.
+
+          - Old 영역(Old Generation)
+               - Young영역에서는 Reachable상태를 유지하여 살아남은 객체가 복사되는 영역
+               - 복사되는 과정에서 대부분 Young영역보다 크게 할당되며 크기가 큰 만큼 가비지는 적게 발생한다.
+               - Old 영역에 대한 가비지 컬렉션을 Major GC 또는 Full GC라고 한다.
+
+- 동작 방식
+     - Young 영역과 Old 영역은 서로 다른 메모리 구조로 되어 있기 때문에, 세부적인 동작 방식은 다르다. 하지만 기본적으로 가비지 컬렉션이 실행된다고 하면 
+     2가지의 공통적인 단계를 따르게 된다.
+
+     ```
+     1. Stop The World
+     Stop The World는 가비지 컬렉션을 실행하기 위해 JVM이 애플리케이션의 실행을 멈추는 작업이다.
+     GC가 실행될 때는 GC를 실행하는 쓰레드를 제외한 모든 쓰레드들의 작업이 중단되고, GC가 완료되면 작업이 재개된다. 당연히 모든 쓰레드들의 작업이 중단되면 애플리케이션이 멈추기 때문에, GC의 성능 개선을 위해 튜닝을 한다고 하면 보통 stop-the-wolrd의 시간을 줄이는 작업을 하는 것이다. 또한 JVM 에서도 이러한 문제를 해결하기 위해 다양한 실행 옵션을 제공하고 있다.
+     ```
+
+     ```
+     2. Mark and Sweep
+     - Mark : 사용되는 메모리와 사용되지 않는 메모리를 식별하는 작업
+     - Sweep: Mark단계에서 사용되지 않음으로 식별된 메모리르 해제하는 
+     
+     STop The World를 통해 모든 작업을 중단 시키면, GC는 스택의 모든 변수 또는 Reachable 객체를 스캔하면서 각각이 어떤 객체를 참고하고 있는지를 탐색하ㅔ 된다. 그리고 사용되고 있는 메모리를 식별하는데, 이러한 과정을 MArk라고 한다.
+     이후에 Mark가 되지 않은 객체들을 메모리에서 제거하는데, 이러한 과정을 Sweep이라고 한다.
+     
+     ```
+
+
+
