--- a/Java/모던인자바/1장/1장.md
+++ b/Java/모던인자바/1장/1장.md
@@ -91,3 +91,98 @@
 
 - 보통 다른 코드와 동시에 실행하더라도 안전하게 실행할 수 있는 코드를 만들려면 공유된 가변 데이터에 접근하지 않아야 한다.
 
+
+## 자바함수
+- 프로그래밍 언어에서 함수라는 용어는 메서드 특히 정적 메서드와 같은 의미로 사용된다.
+- 자바의 함수는 이에 더해 수학적인 함수처럼 사용되며 부작용을 일으키지 않는 함수를 의미한다.
+
+- 프로그래밍 언어의 핵심은 값을 바꾸는 것이다. 역사적으로 그리고 전통적으로 프로그래밍 언어에서는 이 값을 일급 값 이라고 부른다
+    - 일급객체
+        - 변수나 데이터에 할당할 수 있어야 한다.
+        - 객체의 인자로 넘길 수 있어야 한다.
+        - 객체의 리턴 값으로 리턴할 수 있어야 한다.
+
+- 자바8 이전에는 클래스와 메서드는 이급 객체였다.
+- 자바8 이후 이급 시민을 일급 시민으로 바꿀 수 있는 기능을 추가했다.
+
+### 메서드와 람다를 일급 시민으로
+
+- 메서드 참조  
+    - 예시 코드: 파일 필터링
+    ```java
+    File[] hiddenFile = new File(".").listFiles(new FileFilter(){
+        public boolean accpet(File file){
+            return file.isHidden(); // 숨겨진 파일 필터링
+        }
+    })
+    ```
+
+    - 메서드 참조 코드
+    ```java
+    File[] hiddenFiles = new File(".").listfiles(file::isHidden);
+    ```
+
+    - 자바8에서는 File::isHidden을 이용해서 메서드 참조를 만들어 전달할 수 있게 된다.
+
+- 람다 : 익명함수
+    - 자바8에서는 메서드를 일급값으로 취급할 뿐 아니라 람다를 포함하여 함수도 값으로 취급할 수 있다.
+
+
+## 코드 넘겨주기
+- 소프트웨어 공학적인 면에서 복사& 붙여넣기의 단점중 하나는 어떤 코드에 버그가 있다면 복사&붙여넣기한 모든 코드를 수정해야한다.
+
+- 잘못된 코드
+
+```java
+public static List<Apple> filterGreenApples(List<Apple> inventory){
+    List<Apple> result = new ArrayList<>();
+
+    for (Apple apple:inventory){
+        if(GREEN.equals(apple.getColor())){
+            result.add(apple);
+        }
+    }
+}
+
+//코드 붙여넣기
+public static List<Apple> filterHeavyApples(List<Apple> inventory){
+    List<Apple> result = new ArrayList<>();
+
+    for (Apple apple:inventory){
+        if(apple.getWeight()>150){
+            result.add(apple);
+        }
+    }
+}
+```
+
+- 자바8에서는 중복되는 Filter메서드를 중복으로 구현할 필요가 없다.
+
+```java
+public static boolean isGreenApple(Apple apple){
+    return Green.equals(apple.getColor());
+}
+
+public static boolean isHeavyApple(Apple apple){
+    return apple.getWeight() > 150;
+})
+
+public interface Predicate<T>{
+    boolean test(T t);
+}
+
+static List<Apple> filterApples(List<Apple> inventory,Predicate<Apple> p ){
+    List<Apple> result = new ArrayList<>();
+
+    for(Apple apple: inventory){
+        if(p.test(apple){
+            result.add(apple);
+        })
+    }
+    return result;
+}
+```
+
+### 프레디케이트란?
+- 수학에서는 인수로 값을 받아 true나 false를 반환하는 함수를 프레디케이트라고 한다.
+
