[add] Java의정석 접근제어자 및 초기화 블럭 내용추가 java.md - 접근제어자 및 초기화 블럭 내용 추가

--- a/Java/모던인자바/1장/1장.md
+++ b/Java/모던인자바/1장/1장.md
@@ -186,3 +186,23 @@ static List<Apple> filterApples(List<Apple> inventory,Predicate<Apple> p ){
 ### 프레디케이트란?
 - 수학에서는 인수로 값을 받아 true나 false를 반환하는 함수를 프레디케이트라고 한다.
 
+
+## 메서드 전달에서 람다로
+
+- 메서드를 값으로 전달하는 것은 분명 유용한 기능이다. 하지만 한두번만 사용할 메서드를 매번 정의하는 것은 귀찮은 일이다.
+
+- 자바8에서는 람다라는 새로운 개념을 이용해서 코드를 구현할 수 있다.
+```java
+filterApples(inventory,(Apple a) -> GREEN.equals(a.getColor());
+
+//또는
+
+filterApples(inventory,(Apple a)-> a.getWeigth() >150);
+
+// 두개의 메소드를 합쳤을 경우
+filterApples(inventory,(Apple a) -> a.getWeight() <80  || RED.equals(a.getColor()));
+```
+
+- 한 번만 사용할 메서드를 따로 정의를 구현할 필요가 없다.
+- 하지만 람다가 몇 줄 이상으로 길어진다면 익명 람다보다는 코드가 수행하는 일을 잘 설명하는 이름을 가진 메서드를 정의하고 메서드 참조를 활용하는 것이 바람직하다.
+
