--- a/기타.md
+++ b/기타.md
@@ -150,3 +150,10 @@
 
 
 
+## 카프카란
+
+- Apach Kafka는 실시간으로 기록 스트림을 게시, 구독 저장 및 처리 할 수 있는 분산 데이터 스트리핑 플랫폼이다.
+
+- A지점에서 B지점까지 이동하는 것뿐만 아니라 A지점에서 Z지점을 비롯해 필요한 모든 곳에서 대규모 데이터를 동시에 이동할 수 있습니다.
+
+- 대용량, 대규모 메시지 데이터를 빠르게 처리하도록 개발된 메시징 플랫폼이다. 비즈니스 중심의 소셜 네트워크 서비스를 하는 링크드인에서 출발해 2011년 초 아파치 공식 오픈소스로 세상에 공개 되었다. 많은 기업들이 자사의 빅데이터를 기반으로 사용자의 성향을 분석해 앞으로의 고객 행위 등을 예측하는 추천 기술에 관심을 가지기 시작하면서, 아파치 카프카는 빅데이터를 분석할 때 여러 스토리지와 분석 시스템에 데이터를 연결하기 위한 필수도구로 인식되었으며, 넷플릭스, 에어비엔비, 마이크로 소프트, 카카오 등에서 데이터 파이프라인으로서 매우 중요하게 사용되었다.
