--- a/linux/쉘스크립트.md
+++ b/linux/쉘스크립트.md
@@ -22,9 +22,10 @@ hellow world123 root-user: //개행이 안됨
 ```
 
 ## 변수사용
+- 변수 선언시 띄어쓰기 xx
 
 ```bash
-h = "hello"
+h="hello"
 echo "${h}"
 
 // hello 출력
@@ -61,6 +62,7 @@ if[값 1 조건 값2 ]; then
 fi 
 ```
 
+### 대괄호 앞뒤 한칸씩 띄우기
 
 ```bash
 #!/bin/bash
@@ -68,27 +70,27 @@ fi
 function func(){
     a =10
     b=5
-    if [${a} -eq ${b} ]; then
+    if [ ${a} -eq ${b} ]; then
         echo "a와 b는 같다"
     fi
 
-    if [${a} -ne ${b}]; then
+    if [ ${a} -ne ${b} ]; then
         echo "a와 b는 같지 않다"
     fi
 
-    if [${a} -gt ${b}]; then
+    if [ ${a} -gt ${b} ]; then
         echo "a가 b보다 크다"
     fi
 
-    if [${a} -ge ${b}]; then
+    if [ ${a} -ge ${b} ]; then
         echo "a가 b보다 크거나 같다"
     fi
 
-    if [${a} -lt {b}]; then
+    if [ ${a} -lt {b} ]; then
         echo "a가 b보다 작다"
     fi
 
-    if [${a} -le ${b}]; then
+    if [ ${a} -le ${b} ]; then
         echo "a가 b보다 작거나 같다."
     fi
 
@@ -115,4 +117,45 @@ for i in {1..5}
 do
     echo "${i}"
 done
+```
+
+
+
+
+## Nohup
+- 백그라운드 프로세스로 작업할 때 사용하는 명령어
+- nohup은 실행한 명령을 자동으로 백그라운드로 보내지 않고, 사용자가 명령행 뒤에 '&'를 붙여야 한다.
+- HUP은 시그널을 무시하고 프로그램을 지속적으로 실행할 때 사용
+
+```bash
+nohup [명령] & 
+```
+
+
+## grep 
+- 입력으로 전달된 파일의 내용에서 특정 문자열을 찾고자 할 때 사용하는 명령어 이다
+### 1.사용법
+```bash
+$ grep [OPTION] [PATTERN] [FILE]
+```
+
+### 2.사용예시
+```bash
+JAR_NAME=$(ls -tr $REPOSITORY/deploy | grep jar | tail -n 1)
+ 
+# deploy 디렉토리에서 jar문자열을 찾는다
+```
+
+
+## pgrep 
+
+- ps와 grep를 합친 명령어
+    - ps : 현재 실행중인 프로세스 목록과 상태를 보여준다.
+
+
+## 에러코드
+
+```
+Error: Unable to access jarfile
+>> Jar파일을 찾을 수 없다 위치확인하기
 ```
