[add] nohup 문법 내용 추가 쉘스크립트.md - 내용추가

--- a/linux/쉘스크립트.md
+++ b/linux/쉘스크립트.md
@@ -68,7 +68,7 @@ fi
 #!/bin/bash
 
 function func(){
-    a =10
+    a=10
     b=5
     if [ ${a} -eq ${b} ]; then
         echo "a와 b는 같다"
@@ -130,7 +130,14 @@ done
 ```bash
 nohup [명령] & 
 ```
+- 파일명 변경하고 싶을 때
+```bash
+nohup java -jar $REPOSITORY/dep/$JAR_NAME >$REPOSITORY/dep/nohup.out 2>&1 &
 
+#nohub  실행파일[java -jar $REPOSITORY/dep/$JAR_NAME] >원하는주소/파일명 넣기[>$REPOSITORY/dep/nohup.out]
+# 2>&1 : 1의 결과를 2의 파일에 넣는다는 의미이다 파일명이 null일 경우 저장을 안한다.
+# 마지막 & 은 백그라운드에서 실행한다는 의미이다.
+```
 
 ## grep 
 - 입력으로 전달된 파일의 내용에서 특정 문자열을 찾고자 할 때 사용하는 명령어 이다
