--- a/기타/기타.md
+++ b/기타/기타.md
@@ -157,3 +157,24 @@
 - A지점에서 B지점까지 이동하는 것뿐만 아니라 A지점에서 Z지점을 비롯해 필요한 모든 곳에서 대규모 데이터를 동시에 이동할 수 있습니다.
 
 - 대용량, 대규모 메시지 데이터를 빠르게 처리하도록 개발된 메시징 플랫폼이다. 비즈니스 중심의 소셜 네트워크 서비스를 하는 링크드인에서 출발해 2011년 초 아파치 공식 오픈소스로 세상에 공개 되었다. 많은 기업들이 자사의 빅데이터를 기반으로 사용자의 성향을 분석해 앞으로의 고객 행위 등을 예측하는 추천 기술에 관심을 가지기 시작하면서, 아파치 카프카는 빅데이터를 분석할 때 여러 스토리지와 분석 시스템에 데이터를 연결하기 위한 필수도구로 인식되었으며, 넷플릭스, 에어비엔비, 마이크로 소프트, 카카오 등에서 데이터 파이프라인으로서 매우 중요하게 사용되었다.
+
+## SOLID 원칙
+
+- SOLID란 로버트 마틴이 2000년대 초반에 명명한 객체 지향 프로글매이 및 설계의 다섯 가지 기본 원칙을 마이클 패더스가 두문자어 기억술로 소개한 것이다.
+
+```bash
+1. S(SRP) 단일 책임 원칙(Single responsibility principle)
+>> 한 클래스는 하나의 책임만 가져야 한다.
+
+2. O(OCP) 개방-폐쇄 원칙(Open/closed principle)
+>> "소프트웨어 요소는 확장에는 열려있으나 변경에는 닫혀 있어야 한다."
+
+3.L(LSP) 리스코프 치환 원칙(Liskov substitution principle)
+>> 프로그램의 객체는 프로그램의 정확성을 깨뜨리지 않으면서 하위 타입의 인스턴스로 바꿀 수 있어야 한다.
+
+4.I(ISP) 인터페이스 분리 원칙(Interface segregation principle)
+>> 특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫다.
+
+5.D(DIP) 의존관계 역전 원칙(Dependency inversion principle)
+>> 프로그래머는 "추상화에 의존해야지, 구체화에 의존하면 안된다."
+```
