[add] Cloud 개념 추가 클라우드.md - 클라우드 개념 추가

--- a/기타/기타.md
+++ b/기타/기타.md
@@ -45,7 +45,7 @@
 
 ## 리다이랙선
 - 요청을 다른 요청으로 넘길 때 유용하다,
-- 권한이 없느 회원의 요청일 경우 홈페이지로 돌려보낼 때와 같이 사용자의 요청을 우회시킬 때 사용한다
+- 권한이 없는 회원의 요청일 경우 홈페이지로 돌려보낼 때와 같이 사용자의 요청을 우회시킬 때 사용한다
 
 ## 자바언어 장단점
 - 장점:
@@ -93,7 +93,7 @@
      - 일종의 추상 클래스
      - 오직 추상메서드와 상수만을 멤버로 갖는다.
      - Implements키워드를 사용
-     - 상속의 관계가 없는 클래스간 서로 공동되는 로직을 구현하여 쓸 수 있도록 한다.
+     - 상속 관계가 없는 클래스간 서로 공동되는 로직을 구현하여 쓸 수 있도록 한다.
      - Extends는 하나의 클래스만 상속 가능하나 Interface는 다중 상속이 가능하다.
 
 - Abstract
