[add] mkdir p 옵션 추가 쉘스크립트.md - p옵션 추가

--- a/linux/쉘스크립트.md
+++ b/linux/쉘스크립트.md
@@ -3,7 +3,10 @@
 ## 쉘스크립트란?
 - 쉘에게 무슨 명령들을 실행할지 알려주는 스크립트 파일입니다.
 
-
+## mkdir 
+```bash
+-p 옵션을 사용할 경우에는 존재하지 않는 중간의 디렉토리를 자동을 생성해준다.
+```
 
 ## #!/bin/bash
 - 스크립트 최상단에는 항상 이 구문이 적혀 있어야 한다.
