[add] msa강의 1장 정리 끝

--- a/TheRed/1장.md
+++ b/TheRed/1장.md
@@ -104,7 +104,7 @@
 
     >> 다만 해당 구현체는 domain layer에서는 interface로 추상화하고 실제 구현체는 infrastructure layer에서 구현한다.
 
-    >> 즉 domain layer에서는 도메인 로직의 흐름을 표현하고 구현하는 Service와 ServiceImpl이 있지만 그 외의 상세한 구현은 Reader,Store,Executor같은 interface를 선언하여 사용하고 이에 대하 ㄴ실제 구현체는 infrastructure layer에 두고 활용한다 (DIP)
+    >> 즉 domain layer에서는 도메인 로직의 흐름을 표현하고 구현하는 Service와 ServiceImpl이 있지만 그 외의 상세한 구현은 Reader,Store,Executor같은 interface를 선언하여 사용하고 이에 대한 실제 구현체는 infrastructure layer에 두고 활용한다 (DIP)
 
 
 #3 
@@ -126,4 +126,89 @@
     >> 도메인의 전체 흐름이 파악되면서도 로직이 간결하게 유지되는 코드를 가져갈 수 있다. 
     
 
+```
+
+### Infrastructure Layer
+```bash
+
+역할
+>> 상위 계층을 지원하는 일반화된 기술적 기능을 제공한다.
+
+표준 구현
+
+#1 
+>>domain layer에 선언되고 사용되는 추상화된 interface를 실제로 구현하여 runtime시에는 실제 로직이 동작하게 한다.
+    >> DIP개념을 활용한다.
+
+#2.
+>> 세세한 기술 스택을 활용하여 domain의 추상화된 interface를 구현하는 것이므로 비교적 구현에서의 자유도를 높게 가져갈 수 있다.
+
+#3.
+>> Service간의 참조 관계는 막았지만, Infrastructure layer에서의 구현체 간에는 참조 관계를 허용한다.
+    
+    >> Infrastructure에서의 구현체는 domian layer에 선언된 interface를 구현하는 경우가 대부분이므로 Service에 비해 의존성을 많이 가지지 않게 된다.
+
+    >> 로직을 재활용을 위해 Infrastructure내의 구현체를 의존 관계로 활용해도 된다.(순환 참조가 발생하지 않도록 조심하기) 
+        >> 순환참조 - 서로의 서비스를 참조하고있는 관계
+
+#4.
+>> Spring Boot 기반의 구현이라면 @Component를 활용한다.
+    >> Spring 내의 동일한 bean이라도 @Service 와 @Component를 구분하여 선언하여 명시적인 의미를 부여하고자 한다.
+
+    >> Spring에서 @Service와 @Component는 동일하게 class를 Bean으로 등록하고 큰 차이는 없다.
+
+```
+
+
+## Application Layer
+
+```bash
+#역할
+>> 수행할 작업을 정의한다.
+
+>> 도메인 객체가 문제를 해결하도록 지시한다.
+
+>> 다른 애플리케이션 계층과의 상호 작용을 한다.
+
+>> 비즈니스 규칙을 포함하지 않으며, 작업을 조정하고, 다음 하위 계층에서 도메인 객체의 협력을 위해 업무를 위임한다.
+
+>> 해당 Layer는 얇게 유지가 된다.
+
+>> 작업을 조정하기만 하고 도메인 상태를 가지면 안된다.
+
+###### 표준 구현
+
+#1 
+Application Layer에서는 Transaction으로 묶여야 하는 도메인 로직과 그 외의 로직을 aggregation하는 역할로 한정 짓는다.
+
+
+#2.
+해당 Layer의 클래스 네이밍은 XxxFacade로 정의한다.
+
+>> Facde의 개념은 복잡한 여러 개의 API를 하나의 인터페이스로 aggregation하는 역할 이지만 우리가 정의하는 Application Layer내의 Facade는 서비스 간의 조합으로 하나의 요구사항을 처리하는 클래스로 정의하였다.
+```
+
+
+## InterfacesLayer
+
+```bash
+### 역할
+>> 사용자에게 정보를 보여주고 사용자의 명령을 해석하는 책임을 진다.
+
+### 표준구현
+
+# 1.
+API를 설계할 때에는 없어도 되는 Request Parameter는 제거하고, 외부에 리턴하는 Response도 최소한을 유지하도록 노력하자.
+    >> 요구하는 Request Parameter가 많다는 것은 관련된 메서드나 객체에서 처리해야 하는 로직이 많다는 것을 의미하고, 이는 관련된 객체가 생각보다 많은 역할을 하고 있다는 신호일 수 있다.
+
+    >> Response의 경우도 불필요한 응답을 제공하고 있고 이를 가져다 쓰는 외부 로직이 있다면 추후 해당 Response에서 특정 프로퍼티는 제거하기 어렵게 될 수 있다.
+
+    >> API는 한번 외부에 오픈하면 바꿀 수 없는 것이라고 생각하자. 처음부터 제한적으로 설계하고 구현해야 한다.
+
+#2
+http,gRPC, 비동기 메시징과 같은 서비스간 통신 기술은 interfaces Layer에서만 사용되도록 하자.
+
+    >> 가령 JSON처리 관련 로직이나 http cookie 파싱 로직 등이 Domain layer에서 사용되는 식으 구현은 피해야 한다.
+
+    >> 그렇게 하지 않으면 언제든지 교체될 수 있는 외부 통신 기술로 인해 domain로직까지 변경되어야 하는 상황이 발생한다.
 ```
