[add] 2장 내용정리 끝

--- a/TheRed/2장.md
+++ b/TheRed/2장.md
@@ -52,3 +52,53 @@
 
 - API를 설계할 때에는 없어도 되는 request는 제거하고, 외부에 리턴하는 response도 최소한 유지하도록 한다. 
 
+- 요구하는 request가 많다는 것은 해당 메서드나 객체에서 처리해야 하는 로직이 많다는 것을 의미한다.
+
+## setter는 쓰지않거나 최소화 한다. 
+
+- setter는 캡슐화된 도메인과 객체를 깨뜨리는 주범이 된다.
+
+- 도메인 객체를 생성할 때에는 생성자를 활용하여 필수값을 객체 생성 시에 받도록 하고, 도메인의 상태를 변경할 때에는 적절한 메서드명을 가지는 상태 변경 로직을 구현하는 것이 맞다.
+
+
+## transaction의 사용과 범위 설정은 여러 번 고민 후 결정하자.
+- transaction은 도메인의 데이터의 정합성을 위한 필수 기능이다.
+- 다만 서비스 성격에 따라 transaction의 범위를 적절히 잡는 것이 중요하다.
+
+- transaction의 범위는 당연히 작게 잡는 것이 좋다.
+
+- 또한 transaction내에서 외부 3rd pardty 서비스를 호출하는 로직이 있다면 적절한 타임아웃 설정은 필수이고, 필요에 따라서는 transaction내에 포함시키지 않는 것도 고려해야 한다.
+
+
+## 도메인 객체가 무조건 DB에 저장되는 것은 아니다.
+- 모든 도메인 객체가 Repository를 통해 저장되고 관리되는 것은 아니다.
+- 테이블이 저장되지 않는 도메인 객체도 얼마든지 존재할 수 있다.(Value Object)
+
+## Try -catch는 필요한 경우가 아니라면 쓰지 말자.
+
+- 불필요한 try-catch는 로직 흐름을 파악하기 어렵게 하면서도 코드의 양만 늘리는 주범이 된다(Controllerdevice사용하기)
+
+## 꼭 필요한 상태만 선언하자
+- 도메인 객체의 상태값은 도메인의 Identity만큼 중요한 프로퍼티다. 상태값을 통해 도메인 객체의 상태를 판별할 수 있고, 그에 따라 적절한 로직 실행이 가능하기 때문이다.
+
+- 도메인 객체가 현실에 존재하는 모든 상태를 표현할 필요는 없다.
+
+
+## 주요 로직의 테스트 코드는 본인을 살리는 길이다.
+- 요구사항은 수시로 변경된다. 이 때 개발자가 가장 두려워하는 것은 특정 기능을 추가하거나 변경했을 때 예상하지 못한 버그가 발생하지 않을까 하는 막연한 두려움이다.
+
+## 우선 목표한 기능이 동작하게끔 구현한 후에 작게 작게 리팩토링 하자.
+
+- 깔끔한데 동작 안하는 코드보다는 더럽지만 동작하는 코드가 백번 낫다.
+
+- 처음부터 깔끔하게 ㅉ려고 노력하지 말고, 우선 기능이 되게끔 구현한 후에 일정 시점 마다 리팰툉을 시도하는 것이 좋다.
+
+- 구현을 하다보면 처음에 생각하지 못했던 여러 요소를 발견하개 되고, 도메인 지식도 더 깊어지게 된다.
+
+- 코드 구현과 비즈니스는 둘 다 속도가 중요하다는 점을 명시하자.
+
+
+## 무조건 정석대로 구현할 필요는 없다.
+- 약속한 시점에 기능을 런칭하는 것은 정말 중요하다.
+
+- 이런 상황을 맞추기 위해 중복 코드와 하드 코딩이 필요하다면 그렇게 구현해도 된다고 생각한다.
