[add] interceptor 내용 정리

--- a/TheRed/3장.md
+++ b/TheRed/3장.md
@@ -130,3 +130,30 @@
 
         - 변환 로직을 dto 내에 구현하는 것은 응집도를 높이는 측면에서 좋은 구현이 된다.
         
+
+## 강의 인터셉터 내용 정리
+
+```java
+@Slf4j
+@Component
+public class CommonHttpRequestInterceptor implements HandlerInterceptor {
+
+    @Override
+    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) {
+        String requestEventId = request.getHeader(HEADER_REQUEST_UUID_KEY);
+        if (StringUtils.isEmpty(requestEventId)) {
+            requestEventId = UUID.randomUUID().toString();
+        }
+
+        MDC.put(HEADER_REQUEST_UUID_KEY, requestEventId);
+        return true;
+    }
+}
+```
+
+- HandlerInterceptor
+    -  spring frameWork에서 지원하는 기능이며, URI요청,응답 시점을 가로 채서 전/후 처리를 하는 역할을 합니다. interceptor시점에 Spring Context와 bean을 접근할 수 있습니다.
+
+    - preHandle 
+        - 컨트롤러에 진입하기 전에 실행 됩니다. 반환 값이 true일 경우 컨트롤러로 진입하고 false일 경우 진입하지 않습니다. Object handler는 진입하려는 컨트롤러의 클래스 객체가 담겨 있다. 
+        
