[add] uuid 개념 및 테스트 코드 작성

--- a/TheRed/3장.md
+++ b/TheRed/3장.md
@@ -156,4 +156,25 @@ public class CommonHttpRequestInterceptor implements HandlerInterceptor {
 
     - preHandle 
         - 컨트롤러에 진입하기 전에 실행 됩니다. 반환 값이 true일 경우 컨트롤러로 진입하고 false일 경우 진입하지 않습니다. Object handler는 진입하려는 컨트롤러의 클래스 객체가 담겨 있다. 
-        
+
+
+## java.util.UUID
+
+- UUID(Universally unique identifier), 범용 고유 식별자.
+
+- 유일한 식별자를 생성할 수 있다.
+
+```java
+public class MethodTest {
+
+    @Test
+    public void uuid테스트() throws Exception{
+        //given
+        UUID uuid = UUID.randomUUID();
+        //when
+        System.out.println("uuid = "+uuid);
+    }
+
+// uuid = 4be09674-c74a-41db-863f-dac0b965d4fe
+
+```
