[add] API 데이터포맷 개념 정리

--- a/기타/기타.md
+++ b/기타/기타.md
@@ -178,3 +178,21 @@
 5.D(DIP) 의존관계 역전 원칙(Dependency inversion principle)
 >> 프로그래머는 "추상화에 의존해야지, 구체화에 의존하면 안된다."
 ```
+
+## 데이터 포맷
+
+- XML
+- JSON
+     - JavaScript Object Notation라는 의미의 축약어로 데이터를 저장하거나 전송할 때 많이 사용되는 경량의 DATA교환 형식
+
+
+- JSON을 쓰는 이유
+     - 훨씬 가볍다
+     - json은 객체 단위 매핑이 가능해 유지 보수가 용이함
+     - XML은 JSON보다 구문 분석하기가 훨씬 더 어렵다
+     - JSON은 바로 사용할 수 있는 JavaScript 객체로 구문 분석합니다.
+
+## API
+
+- 어플리케이션 프로그래밍을 하는데 사용되는 인터페이스
+     - 클라이언트 개발자는 회원가입 기능을 구현하기 위해 모든 로직을 짤 필요가 없다. 그 로직을 가지고 있는 서버에 회원가입 API를 요청하면 된다.
