[add] Random String util 내용 추가

--- a/TheRed/3장.md
+++ b/TheRed/3장.md
@@ -178,3 +178,20 @@ public class MethodTest {
 // uuid = 4be09674-c74a-41db-863f-dac0b965d4fe
 
 ```
+
+## RandomStringUtils
+
+- 랜덤 문자열을 만들 때 유용한 라이브러리
+```java    
+@Test
+public void 랜덤문자열테스트() throws Exception{
+    //given
+    String s = RandomStringUtils.randomAlphabetic(20);
+    //when
+    System.out.println("s = " +s );
+    // s = RJyoCjYTZnWNcbNyckGU
+}
+```
+
+- randomAlphanumeric(length); length길이만큼 알파벳과 숫자를 이용하여 랜덤 문자열을 생성한다.
+
