--- a/Kotlin/코틀린.md
+++ b/Kotlin/코틀린.md
@@ -75,3 +75,46 @@ class MappingService private  constructor(val name: String? = DEFAULT_NAME)
 }
 
 ```
+
+
+
+## 변수 
+
+- Entity 생성
+
+```kotlin
+// noargs 플러그인 적용 
+
+@Entity
+class Member(name: String,phone : String) {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    var id: Long? = null
+    var name: String = name
+    var phone:String = phone
+}
+```
+
+- 코틀린은 기본 변수에서 null을 허용하지 않는다.
+    - var a: Int? = null // 자료형 뒤에 물음표를 붙이면 nullable 변수로 선언할 수 있다.
+
+    - 코틀린의 변수는 반드시 초기화 되야 한다.
+        
+- 코틀린 변수 선언
+    - val
+        - 선언시에만 초기화 가능, 중간에 값을 변경할 수 없음, runtime시에 변경되지 말아야 할 값은 안전하게 val로 선언하는 것이 좋다.
+    - var 
+        - 일반적인 변수 언제든 읽기 , 쓰기가 가능하다.
+
+- Get메소드 - Filed
+
+```kotlin
+// get 메소드의 filed는 프토퍼티의 실제 값을 저장하는 변수를 칭하는 키워드 입니다.
+
+var phone :String = "01044444444"
+    get(){
+        return filed // 명시적 선언 
+    }
+
+
+```
