[add] DDD - Aggregate내용 정리

--- a/TheRed/3장.md
+++ b/TheRed/3장.md
@@ -195,3 +195,22 @@ public void 랜덤문자열테스트() throws Exception{
 
 - randomAlphanumeric(length); length길이만큼 알파벳과 숫자를 이용하여 랜덤 문자열을 생성한다.
 
+
+
+## DDD 에서의 Aggregate
+
+- 필요성
+    - 모델 내에서 복잡한 연관관계를 맺는 객체를 대상으로 일관된 규칙을 보장하기는 쉽지 않다.
+    - 개별 객체만이 아닌 서로 밀접한 관계에 있는 객체 집합에도 변경에 대한 일관된 규칙이 유지되어야 하기 때문이다.
+    - 이를 위해 Aggregate를 구성하고 Aggregate에 적용되는 불변식은 각 트랜잭션이 완료될 때 이행되도록한다. 
+
+- 특징
+    - Aggregate는 데이터 변경의 단위로 다루는 연관 객체의 묶음을 말한다.
+    - 각 Aggregate에는 루트(Root)와 경계(Boundary)가 있는데
+        - 경계는 Aggregate에 무엇이 포함되고 포함되지 않는지를 정의한다.
+        - 루트는 단 하나만 존재하며 Aggregate에 포함된 특정 Entity를 가리킨다.
+    - 각 루트 Entity는 전역 식별성을 지니고, 경계 안의 Entity는 지역 식별성을 지닌다.
+    - Aggregate 경계 밖에서는 루트 Entity를 제외한 Aggregate 내부의 구성요소를 참조할 수 없다.
+    - Aggregate 경계 안의 어떤 객체를 변경하더라도 전체 Aggregate으 불변식은 모두 지켜져야 한다.
+
+    - ## 즉 Aggregate는 생명주기의 전 단계에서 불변식이 유지되어야 할 범위 표시 
