--- a/TheRed/3장.md
+++ b/TheRed/3장.md
@@ -214,3 +214,17 @@ public void 랜덤문자열테스트() throws Exception{
     - Aggregate 경계 안의 어떤 객체를 변경하더라도 전체 Aggregate으 불변식은 모두 지켜져야 한다.
 
     - ## 즉 Aggregate는 생명주기의 전 단계에서 불변식이 유지되어야 할 범위 표시 
+
+
+## 로직 구성
+
+- 데이터 이동 
+```bash
+
+Reqeust dto(toCommand) -> command(toEntity) -> domain -> domainInfo(domainInfo(domain)) -> responseDto(responseDto(domainInfo))
+
+```
+
+## 도메인 추상화
+
+ - 추상화가 너무 높으면  여러군데를 봐야하기 때문에 읽기 불편할 수 도 있다. 
