--- a/기타/객체지향설계.md
+++ b/기타/객체지향설계.md
@@ -7,3 +7,12 @@
 - 어떤 클래스가 필요한가가 아니라 어떤 객체들이 어떤 메시지를 주고 받으며 협력하는가다.
 
 
+## 객체
+
+- 상태 
+    - 객체는 상태라는 개념을 갖는다
+        - 상태는 특정 시점에 객체가 가지고 있는 정보의 집합으로 객체의 구조적 특징을 표현한다. 객체의 상태는 객체에 존재하는 정적인 프로퍼티와 동적인 프로퍼티 값으로 구성된다. 객체의 프로퍼티는 단순한 값과 다른 객체를 참조하는 링크로 구분할 수 있다.
+
+        - 상태라는 개념을 갖고 있지 않는다면 속성값의 변화는 계속 이전행동 히스토리들을 모두 저장하고 있어야 한다.
+
+
