[add] 5주차 스터디 내용 보충

--- a/소프트웨어 아키텍처 문서화/5주차.md
+++ b/소프트웨어 아키텍처 문서화/5주차.md
@@ -1,7 +1,11 @@
 ## 인터페이스 문서화
-
+- 인터페이스란
+    - 두 요소가 만나고 서로 상호작용 또는 의사소통하는 경계다.
+- 제공 인터페이스  vs 필수 인터페이스
+    - 제공인터페이스: 현재 요소가 제공하는 인터페이스 
+    - 필수 인터페이스: 현재 요소가 작동하기 위해서는 필요한 인터페이스
 -  인터페이스 문서화
-    - 요소가 자신의 환경과 갖는 상호호작용의  모든 면으로 인터페이스가 구성되지만, 인터페이스에 무엇을 노출 시킬지 결정하는 것은 좀 더 제한된다
+    - 요소가 자신의 환경이 갖는 상호호작용의  모든 면으로 인터페이스가 구성되지만, 인터페이스에 무엇을 노출 시킬지 결정하는 것은 좀 더 제한된다
         - 모든 걸 나타내기에는 무리가 있다.
         - 알아야 할 필요가 있는 것만을 노출해야 한다.
 
@@ -14,6 +18,8 @@
         - 어떤 인터페이스가 하나 이상의 뷰에 나타나면 인터페이스 문서화를 기록할 뷰를 하나 선택하고 다른 뷰에는 그것을 참조 하도록 한다.
         
     - 인터페이스를 문서화할 때 중복이 될 수 있으니 상황에 맞게 효율적인 곳에 하나만 작성한다.
+         - 불필요한 중복을 줄이고 좀 더 유용한 곳에 문서화를 한다.
+         - 
 
 - 인터페이스 문서화의 표준 구성
     - 좋은 문서화의 가장 중요한 원리는 표준 구성을 사용하는 것을 규정한다.
@@ -39,4 +45,47 @@
     - 분석가: 필요한 정보는 수행되는 분석 유형에 달려 있따.
 
 
-    
+    ## 행위 문서화
+    - 잠재적인 교착 상태와 병목 현상을 식별할 수 있다.
+
+    - 행위 문서가 나타내는 정보
+        - 요소 사이의 상호작용 순서
+        - 동시성 기회
+        - 상호작용의 시간 의존성
+        - 시스템 또는 시스템 일부의 가능한 상태?
+        - 다른 시스템 리소스의 사용 패턴
+    - 행위 문서화 방법
+        - 1단계: 어떤 유형의 질문에 대답할지를 결정한다.
+            - 어떤 유형의 행위를 모델링할지 결정하는 것은 설계하는 시스템의 유형과 개발 단계, 그리고 설계 노력의 집중에 달려 있다. 
+            - 행위는 트랜잭션의 원소적이며 롤백 프로시저가 있어야 한다. 
+            - 실시간 임베디드 시스템에서 이벤트 순서와 함께 타이밍 속성에 관해 많은 것을 말할 필요가 있다.
+            - 이러한 정보(상호작용의 제약사항)를 문서화하면 의도된 행위를 드러내는 구현을 만들어낼 가능성이 많아 진다.
+
+        - 2단계 : 어떤 타입의 정보를 사용할지, 제약할지를 결정한다.
+            -  커뮤니케이션 타입
+            - 순서 제약 사항
+            - 시간 기반 자극 
+        - 3단계: 표기법을 선택한다.
+            - 시스템 행위의 문서화를 지원하는 어떤 언어도 상호작용의 시퀀스를 서술할 수 있는 구조물을 포함해야 한다.
+
+            - 행위 문서화의 두 그룹
+                - 추적 모델
+                    - 특정한 자극에 대한 시스템의 반응을 서술하는 행위 또는 상호작용의 시퀀스
+                    - 특정한 시나리오에서 시스템의 활동 순서를 서술하는 것이 목표일 때 사용한다.
+                    - 해당 요소의 행위의 일부분만 추적
+                - 포괄 모델
+                    - 시물레이션을 수행하거나 정적 분석 기법을 적용하는 경우에서 처럼 완전한 행위적 이해가 필요할 때 사용한다.
+                    - 요소또는 요소의 그룹의 모든 행위에 초점을 둔다.
+    - 행위 문서화 표기법
+        - 추적 표기법  
+            - 유스케이스  (399 그림 8.2) 
+            - 시퀀스 다이어 그램
+            - 커뮤니케이션 다이어그램
+            - 엑티비티 다이어그램 
+    - 행위 문서화 이유
+        - 개발 행위 주도 
+            - 행위 문서화는 시스템 개발 행위 동안에 이해당사자 사이의 의사소통 수단으로서의 아키텍처의 역할에서 중요한 부분으 ㄹ담당한다.
+        - 분석
+            - 행위 문서화는 소프트웨어 시스템의 완료성과 정확성, 품질 속성을 추론할 수 있게 한다. 
+                - 시스템의 행위를 시물레이션해서 품질을 체크할 수 있다.
+            
