--- a/기타/도커.md
+++ b/기타/도커.md
@@ -4,8 +4,35 @@
 - 리눅스 컨테이너를 기반으로 하여 특정한 서비스를 패키징하고 배포하는데 유용한 오픈소스 프로그램이다. 
 
 ### 가상 머신과 도커 컨테이너 
-
-- 가상머신은 하이퍼바이저를 이ㅛㅇㅇ해 Guest OS를 만들어낸다. 예를 들어 운영체제를 메인으로 쓰고 싶다면 이는 Host OS가 되는 것이고 이 위에 Ubuntu를 가상 머신위에 구동시키는것이다. Guest OS를 구동시키려면  Host OS에서 자원을 일부 사용해야 한다. 
+- 가상머신은 하이퍼바이저를 이용해 Guest OS를 만들어낸다. 예를 들어 운영체제를 메인으로 쓰고 싶다면 이는 Host OS가 되는 것이고 이 위에 Ubuntu를 가상 머신위에 구동시키는것이다. Guest OS를 구동시키려면  Host OS에서 자원을 일부 사용해야 한다. 
 따라서 Host OS가 느려진다.
 
 - 가상머신에 비해 꼭 필요한 것만 담겨서 구동된다는 차이가 있다. 즉 컨테이너에 필요한 커널은 호스트의 커널과 공유해서 사용하고, 컨테이너안에는 애플리케이션을 구동하는데 필요한 라이브러리 및 실행파일만 존재하기 때문에 컨테이너를 이미지로 만들경우 용량이 대폭 줄어든다.
+
+- 명령어
+```bash
+docker ps : 현재 가동중인 프로세스를 보여준다.
+
+run - 컨테이너 생성과 동시에 컨테이너 접속(-d 옵션을 주면 데몬 프론세스 형태로 변경)
+# 컨테이너 시작과 종료
+docker start "container ID" - 컨테이너 시작
+docker stop "container ID" - 컨테이너 스탑
+
+
+exec - 실행중인 컨테이너에 명령어를 실행하는 방법
+
+```
+
+- mysql 실행방법
+
+``` bash
+# docker
+docker run --platform linux/amd64 -p 3306:3006 --name mysql-basic 
+-e MYSQL_ROOT_PASSWORD=1234 -d mysql
+
+docker exec -it mysql-basic bash
+
+mysql -uroot 
+
+create databse yushinl;
+```
