[add] 프로그래밍 단어 정리

--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -9,4 +9,18 @@ labelled versions : 레이블링된 버전
 Composite : 합성
 disjoint: 분리하다
 
+token : 네트워크의 경우 송신권을 주고 받는 데이터
+normalize: 정규화
+deploy: 프로그램 등을 서버와 같은 기기에 설치하여 작동 가능하도록 만드는일
+inheritance: 상속
+encapsulation: 캡슐화
+polymorphism: 다형성
+sequence: 순서를 매기다
+flush: 쌓인 데이터나 로그를 클리어
+or under: 이하
+and over: 이상
+push: 스택 등에 넣다.
+pop,pull: 빼다
+suspend: 쉬다
+
 ```
