--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -22,5 +22,12 @@ and over: 이상
 push: 스택 등에 넣다.
 pop,pull: 빼다
 suspend: 쉬다
-
+reflection: 반사
+a set of : ~집합
+distribution : 분배
+	Reflection is a set of language and library features : Reflection은 언어와 라이브러리 기능들의 집합이다
+introspect: 반성하다 내성하다(자신을 돌이켜보다)
+inferred:추론된
+infer : 추론하다
 ```
+
