--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -29,7 +29,9 @@ distribution : 분배
 introspect: 반성하다 내성하다(자신을 돌이켜보다)
 inferred:추론된
 infer : 추론하다
-Redundant curly braces : 중복 중괄호
+Redundant curly braces : 중복 중괄호'
+I’ve so far  ran Cinnamon : 시나몬을 조사해봤다.
+
 
 ```
 
