빌더패턴 예시 작성

--- a/TheRed/2장.md
+++ b/TheRed/2장.md
@@ -35,8 +35,11 @@
 
 - 코딩을 하기 전에 먼저 해야할 것들
     - 우리가 개발해야 하는 주요 요구사항과 제약 등을 감안하면서
-    - 핵심 도메인 객체를 돛루하고
+    - 핵심 도메인 객체를 도출하고
     - 특정 기능을 수행하기 위해 도메인 간에 주고 받아야 하는 메시지를 먼저 정의하는 것이다.
+        ```
+        ex) 필수 속성, 필수 메서드 뽑아내기
+        ```
 
 ## 변수명, 메서드명에 많은 신경을 쓰자
 
@@ -44,7 +47,7 @@
 
 - DDD에서 말하는 유비쿼터스 언어 개념처럼 - 현업에서 사용하는 보편적인 언어를 최대한 반영하자
 
-- 전사 표준, 또는 프로젝트 내에서의 네이밍 규치을 세우고 운영하는 것도 좋다.
+- 전사 표준, 또는 프로젝트 내에서의 네이밍 규칙을 세우고 운영하는 것도 좋다.
     - 슬랙에서 별도의 채널을 만들어 코드 네이밍을 위한 의견을 주고 받는 장치를 마련하는 것도 좋다.
 
 
@@ -77,6 +80,8 @@
 ## Try -catch는 필요한 경우가 아니라면 쓰지 말자.
 
 - 불필요한 try-catch는 로직 흐름을 파악하기 어렵게 하면서도 코드의 양만 늘리는 주범이 된다(Controllerdevice사용하기)
+- try-catch의 사용은 Exception을 catch 했을 때  추가적인 로직 구현이 필요한 경우에만 사용하기. 에러만 표현할 때에는 throw사용하기
+
 
 ## 꼭 필요한 상태만 선언하자
 - 도메인 객체의 상태값은 도메인의 Identity만큼 중요한 프로퍼티다. 상태값을 통해 도메인 객체의 상태를 판별할 수 있고, 그에 따라 적절한 로직 실행이 가능하기 때문이다.
