--- a/TheRed/3장.md
+++ b/TheRed/3장.md
@@ -228,3 +228,72 @@ Reqeust dto(toCommand) -> command(toEntity) -> domain -> domainInfo(domainInfo(d
 ## 도메인 추상화
 
  - 추상화가 너무 높으면  여러군데를 봐야하기 때문에 읽기 불편할 수 도 있다. 
+
+
+
+
+## 빌더패턴
+
+
+```
+public class Member {
+    private String name;
+    private int age;
+
+    public String getName() {
+        return name;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    private Member(Builder builder) {
+        this.name = builder.name;
+        this.age = builder.age;
+    }
+
+    // Generator :command + n
+    public static class Builder {
+        private String name;
+        private int age;
+
+        public Builder() {
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public void setName(String name) {
+            this.name = name;
+        }
+
+        public int getAge() {
+            return age;
+        }
+
+        public void setAge(int age) {
+            this.age = age;
+        }
+
+        public Member build() {
+            return new Member(this);
+        }
+    }
+}
+
+
+
+    @Test
+    public void builder(){
+        var build = new Member.Builder();
+        build.setAge(15);
+        build.setName("유신");
+        Member member = build.build();
+        System.out.println(member.getAge());
+        System.out.println(member.getName());
+    }
+
+    // 15 ,유신
+```
