--- a/소프트웨어 아키텍처 문서화/1주차.md
+++ b/소프트웨어 아키텍처 문서화/1주차.md
@@ -1,5 +1,5 @@
 ## 1주차 
-성능,신뢰성,보안 , 변경요이성, 과같은 품질 속성은 모두 소프트웨어가 정확한 해결책을 만드는 것을 확인하는 것만큼 중요하다
+성능,신뢰성,보안 , 변경용이성, 과같은 품질 속성은 모두 소프트웨어가 정확한 해결책을 만드는 것을 확인하는 것만큼 중요하다
 
 해결 방안들을 찾아내고 그것을 수행할 사람들에게 효과적으로 전달하는 것은 아키텍트에게 달려 있다.
 
