[add] 공부내용 정리

--- a/TheRed/3장.md
+++ b/TheRed/3장.md
@@ -226,8 +226,8 @@ Reqeust dto(toCommand) -> command(toEntity) -> domain -> domainInfo(domainInfo(d
 ```
 
 ## 도메인 추상화
-
- - 추상화가 너무 높으면  여러군데를 봐야하기 때문에 읽기 불편할 수 도 있다. 
+    - 도메인 레벨은 추상화를 하라고 하신다. 매우중요
+    - 추상화가 너무 높으면  여러군데를 봐야하기 때문에 읽기 불편할 수 도 있다. 
 
 
 
@@ -297,3 +297,16 @@ public class Member {
 
     // 15 ,유신
 ```
+
+
+
+## MapStruct
+```
+MapStruct is a code generator that greatly simplifies the implementation of mappings between Java bean types based on a convention over configuration approach.
+
+자바 빈 유형의 매핑 구현을 간소화한 코드 생성기
+```
+
+
+## 각 레이어 Dto를 두어 의존성을 낮춘다. (Interface Dto -> Service Dto -> Service domain)
+- 종속성을 낮추어 다른 레이어를 변환 시킬 때 보다 편리하게 변환 시킬 수 있다.
