--- a/기타/네이밍.md
+++ b/기타/네이밍.md
@@ -5,4 +5,6 @@
 - findByXxx: Optional<T> 리턴
 - makeXxxx: DB Operation과 관계없이 메모리 상에서 값을 조합하여 객체를 생성
 - initEntity: makeXxxx로 생성된 초기 Entity DB에 저장된 객체가 아니므로 Auto Increment기반의PK값이 Null임
+- toEntity:  X를 entity로 변환
+
 
