Root Aggregate개념 정리

--- a/TheRed/3장.md
+++ b/TheRed/3장.md
@@ -310,3 +310,18 @@ MapStruct is a code generator that greatly simplifies the implementation of mapp
 
 ## 각 레이어 Dto를 두어 의존성을 낮춘다. (Interface Dto -> Service Dto -> Service domain)
 - 종속성을 낮추어 다른 레이어를 변환 시킬 때 보다 편리하게 변환 시킬 수 있다.
+
+
+## root arggregate? 
+- DDD에서 엔티티마다 레퍼지토리(Repository)를 만드는 경우가 많다. 이럴 때 여러 엔티티를 묶어서 하나처럼 사용하는 경우가 많다. 연관 객체의 묶음을 Aggregate라고 한다.
+    -  ex) Order - OrderItem - OrderItemOptionGroup - OrderItemOption
+- 연관 객체의 묶음 중 전역 식별성(Global Identity)을 지닌 엔티티가 루트 엔티티이다. 이떄 Root Aggregate라고 부른다.
+-  여러 엔티티를 묶어서 가져오는 경우가 많을 땐 개발에서 Root Aggregate에 해당하는  Entity에 대해서만 Repository를 만들어서 무결성을 만들고자할 때 사용한다.
+- 루트는 하나만 존재하고 Aggregate내의 특정 엔티티를 가리킨다. 경계 안의 객체는 서로 참조할 수 있지만, 경계 바깥의 객체는 해당 Aggregate의 구성요소중 루트에만 참조할 수 있다.
+    - 외부에서는 Order만 참조할 수 있고 나머지는 따로 직접 참조할 수 없습니다.
+    
+### Aggregate단위로 Repository를 만들어야 하는 이유
+    - 데이터 무결성 측면에서 유리하다. 
+        - Order가 생성되지도 않고 나머지 엔티티들에 데이터를 저장하고 삭제하는 경우가 생긴다면 데이터의 무결성이 떨어지기 때문이다. 
+        - 여러객체들을 하나의 객체로 중심적으로 관리하면 개발자 입장에서는 좀 더 편리하게 제어를 할 수 있다..?
+        - 
