구현체찾기

--- a/Kotlin/코틀린.md
+++ b/Kotlin/코틀린.md
@@ -1,5 +1,9 @@
 # Kotlin 문법정리
 
+## Intellij Implements Method찾기
+    -  Setting -> Keymaps -> implements검색
+    - option + command + b 또는 optioon + command + 좌클릭
+
 ## 클래스
 - 클래스란 객체를 정의하는 틀 또는 서계라는 의미
 
