심볼릭링크

--- a/기타/기타.md
+++ b/기타/기타.md
@@ -197,3 +197,18 @@
 - 어플리케이션 프로그래밍을 하는데 사용되는 인터페이스
      - 클라이언트 개발자는 회원가입 기능을 구현하기 위해 모든 로직을 짤 필요가 없다. 그 로직을 가지고 있는 서버에 회원가입 API를 요청하면 된다.
 
+
+
+## 심볼릭 링크
+```
+심볼릭 링크: ln -s [대상원본파일] [새로 만든 파일이름]
+    의미: 링크를 연결하여 원본 파일을 직접 사용하는 것과 같은 효과를 내는 링크이다. 윈도우의 바로가기와 비슷한 개념
+
+
+/usr/bin : 일반적으로 아주 기본적은 프로그램의 위치 /bin과의 가장 큰 차이점은 general-system-wide범위에서 사용가능 하다는 점이다.
+이에 속하는 파일로는 sudo 명령어 vi명령어들이 위치한다.
+
+/bin : 일반적으로 아주 기본적인 프로그램이 위치, 특히 콘솔에서 필요로 하는 것들과 리눅스가 돌아가기 위해 가장 최소로 필요한 프로그램들이 보관되어 있다.
+https://wookiist.dev/10  
+
+```
