클린코드 1장 2장정리

--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -31,7 +31,12 @@ inferred:추론된
 infer : 추론하다
 Redundant curly braces : 중복 중괄호'
 I’ve so far  ran Cinnamon : 시나몬을 조사해봤다.
-
-
+propagate: 전파하다
+in the true spirit of : 진정한 정신으로
+terminology: 용어
+sophisticated : 정교한
+Iterates : 반복하다
+a range of : 범위의,다양한 
+Beware of : ~를 조심해라
 ```
 
