클린코드 3장 개념정리

--- a/클린코드/2장.md
+++ b/클린코드/2장.md
@@ -1,4 +1,4 @@
-# 2장
+# 2장 변수이름
 
 - 의도를 분명히 밝혀라
     - 의도가 분명한 이름을 짓는데 시간이 쫌 걸리지만 절약하는 시간이 더 많다.
@@ -39,7 +39,7 @@
 
 - 그릇된 정보를 피하라
     - 실제 List가 아닐 경우 변수명에 List를 덧붙히지 않는다
-        - ex) 여러 계정을 그룹으로 묶을 때 리스트가 아닐경우 list를 사용하지 않는다. 프로글매ㅓ에게 List라는 단어는 특수한 의미이다. 
+        - ex) 여러 계정을 그룹으로 묶을 때 리스트가 아닐경우 list를 사용하지 않는다. 프로그래머에게  List라는 단어는 특수한 의미이다. 
         accountGroup또는 단순히 Accounts라고 명명한다.
 
     <br>
