--- a/Java/우테코프리패스/프리패스내용.md
+++ b/Java/우테코프리패스/프리패스내용.md
@@ -30,3 +30,28 @@
 28) 한줄에 점 하나만 찍었는가?
 29) 일급 컬렉션의 형태로 작성하였는가?
 30) 비지니스 로직과 UI 로직을 한 클래스가 담당하지 않도록 한다.
+
+
+## 소트웍스 앤솔러지
+
+- 한 메서드에 오직 한 단계의 들여쓰기만 한다.
+- else예약어를 쓰지 않는다.
+- 모든 원시 값과 문자열을 포장한다.
+- 한줄에 점을 하나만 찍는다.
+- 줄여 쓰지 않는다.
+- 모든 엔티티를 작게 유지한다.
+- 3개 이상의 인스턴스 변수를 가진 클래스를 쓰지 않는다.
+- 일급 컬렉션을 쓴다.
+- getter/setter 프로퍼티를 쓰지 않는다.
+
+
+## 의식적인 연습의 7가지 원칙
+- 효과적인 훈련 기법이 수립되어 있는 기술 연마
+- 개인의 컴포트 존을 벗어난 지점에서진행, 자신의 현재 능력을 살짝 넘어가는 작업을 지속적으로 시도
+- 명확하고 구체적인 목표를 가지고 진행
+- 신중하고계획적이다. 개인이 온전히 집중하고 의식적으로 행동할 것을 요구
+- 피드백과 피드백에 따른 행동 변경을 수반
+- 효과적인 심적 표상을 만들어내는 한편으로 심적 표상에 의존
+- 기존에 습득한 기술의 특정 부분을 집중적으로 개선함으로써 발전시키고 수정하는 과정을 수반
+
+
