이상 초과 이하 미만 관련 영어

--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -42,3 +42,29 @@ variable : 변수
 immutable variable: 불변 변수
 ```
 
+
+
+## 이상,이하,초과,미만 
+
+```bash
+## 이상
+2 or more //2개이상
+more than 2
+not less than 2
+
+## 2초과
+above 2
+grater than 2
+exceeding 2
+over 2
+
+## 2이하
+2 or less
+not exceeding 2
+not more than 2
+
+## 2미만
+under 2
+below 2
+less than 2
+```
