정규표현식 문법

--- a/Kotlin/정규식.md
+++ b/Kotlin/정규식.md
@@ -15,13 +15,21 @@
 - 양의 지정
     - ? : 물음표는 0번 또는 1차례까지의 발생을 의미한다. 이를테면 colou?r는 color와 colour를 둘 다 일치 시킨다.
 
-    - * : 별표는 0 번 이상의 발생을 의미한다. 이를테면 ab*c는 "ac" ,"abc","abbc","abbbc"등을 일치 시킨다. 
+    - '\*' : 별표는 0 번 이상의 발생을 의미한다. 이를테면 ab\*c는 "ac" ,"abc","abbc","abbbc"등을 일치 시킨다. 
 
-    - + : 덧셈 기호는 1번 이상의 발생을 의미한다. 이를테면 ab+c는 "abc","abbc","abbbc"등을 일치시키지만 "ac"는 일치시키지 않는다.
+    - '+' : 덧셈 기호는 1번 이상의 발생을 의미한다.기호 바로앞의 문자가 하나 이상 있음  이를테면 ab+c는 "abc","abbc","abbbc"등을 일치시키지만 "ac"는 일치시키지 않는다.
 
     - {n} :정확히 n번 일치
 
     - {min,} : min번 이상만큼 일치 시킨다.
     
-    {min,max}: 적어도 min번 만큼 일치시키지만 max번을 초과하여 일치시키지는 않는다.
-    
+    -  {min,max}: 적어도 min번 만큼 일치시키지만 max번을 초과하여 일치시키지는 않는다.
+
+    - . : 임의의 한 문자를 의미한다.
+    - ^ : 문자열의 시작을 의미한다.
+    - $ : 문자열의 끝을 의미한다.
+
+
+
+
+
