[add] infra 프로비저닝 개념 && 기타 - SDK개념 정리

--- a/기타/기타.md
+++ b/기타/기타.md
@@ -212,3 +212,9 @@
 https://wookiist.dev/10  
 
 ```
+
+## SDK
+- 개요: 소프트웨어 개발 키트(Software Development Kit,SDK)
+- 하드웨어 플랫폼, 운영체제 또는 프로그래밍 언어 제작사가 제공하는 일련의 툴
+- SDK를 사용해야 하는 이유 : 소프트웨어 개발자는 SDK를 활용하여 특정 플랫폼, 시스템 또는 프로그래밍 언어에 따라 어플리케이션을 개발할 수 있다.
+이를 직접 조립할 수 있는 옷장에 포함되어 있는 도구 키트라고 생각하면 쉽다.
