--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -40,6 +40,8 @@ a range of : 범위의,다양한
 Beware of : ~를 조심해라
 variable : 변수
 immutable variable: 불변 변수
+the capabilities of servers : 서버의 기능 
+by means of : ~에 의해 
 ```
 
 
