--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -42,6 +42,12 @@ variable : 변수
 immutable variable: 불변 변수
 the capabilities of servers : 서버의 기능 
 by means of : ~에 의해 
+be used to v : ~하는데 사용되는 
+Having a clos look: 자세히보다
+	Having a close look at the code : 코드를 자세히보다
+separate out : 따로따로 나누다
+separate out shapes : 모양을 나누다.
+
 ```
 
 
