--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -47,7 +47,7 @@ Having a clos look: 자세히보다
 	Having a close look at the code : 코드를 자세히보다
 separate out : 따로따로 나누다
 separate out shapes : 모양을 나누다.
-
+streamlines: 간소화하다.
 ```
 
 
