영단어정리

--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -48,7 +48,12 @@ Having a clos look: 자세히보다
 separate out : 따로따로 나누다
 separate out shapes : 모양
 incompatible: 양립할 수 없는
-	Modifier 'private' is incompatible with 'open' 	
+	Modifier 'private' is incompatible with 'open'
+aborted: 실패한
+	During an aborted deployment 배포가 중단되는ㄷ농안
+Severe : 심각한 
+
+
 ```
 
 
