--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -52,8 +52,13 @@ incompatible: 양립할 수 없는
 aborted: 실패한
 	During an aborted deployment 배포가 중단되는ㄷ농안
 Severe : 심각한 
+credentials : 자격증
+	This code example uses basic credentials : 이 코드는 기본 자격증명을 사용한다.
+ensure : 확인하다, 보장하다
+	ensure that you have the following dependency in your project’s pom.xml file:
 
-
+ingest : 삼키다,먹다
+	You also need to define an ingest pipeline like this:// 다음과 같이 수집한 파이프라인을 정의해야할 필요가 있다.
 ```
 
 
