도커 개념 추가정리

--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -59,6 +59,9 @@ ensure : 확인하다, 보장하다
 
 ingest : 삼키다,먹다
 	You also need to define an ingest pipeline like this:// 다음과 같이 수집한 파이프라인을 정의해야할 필요가 있다.
+instructions : 설명 ,지시
+ruunable : 실행가능한
+	ex) A container is a runnable instance of an image.  한 이미지의 실행가능한 인스턴스이다.
 ```
 
 
