--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -62,6 +62,7 @@ ingest : 삼키다,먹다
 instructions : 설명 ,지시
 ruunable : 실행가능한
 	ex) A container is a runnable instance of an image.  한 이미지의 실행가능한 인스턴스이다.
+dawn : 새벽
 ```
 
 
