--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -62,6 +62,10 @@ instructions : 설명 ,지시
 ruunable : 실행가능한
 	ex) A container is a runnable instance of an image.  한 이미지의 실행가능한 인스턴스이다.
 dawn : 새벽
+Subsequent: 이후에 
+	Subsequent initializations of logging will have a Spring Environment. // 로깅이후의 초기화는 스프링 환경을 가진다.
+internally: 내부적으로
+batches: 함께묶다.
 ```
 
 
