쉘스크립트를 활용하여 파일만들기

--- a/linux/쉘스크립트.md
+++ b/linux/쉘스크립트.md
@@ -210,3 +210,26 @@ JAR_NAME=$(ls -tr $REPOSITORY/dep/ | grep jar | tail -n 1)
 echo ">> JAR NAME : $JAR_NAME"
 nohup java -jar $REPOSITORY/dep/$JAR_NAME >$REPOSITORY/dep/nohup.out 2>&1 &
 ```
+
+
+## 쉘스크립트롤 이용하여 파일 만들기
+
+- echo "test" > text.txt // 기존에 내용물을 지우고 test를 삽입
+- echo "test1" >> text.txt // 이어서 test1을 삽입한다.
+
+```
+#!/bin/bash
+echo -e "version: \"3\"
+services:
+ logstash:
+  build: \".\"
+  container_name: \"logstash\"
+  ports:
+   - \"80:9600\"
+   - \"5044:5044\"
+   - \"5045:5045\"
+   - \"4567:4567\"" > docker-compose.yml
+
+docker-compose up
+"
+```
