--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -66,6 +66,7 @@ Subsequent: 이후에
 	Subsequent initializations of logging will have a Spring Environment. // 로깅이후의 초기화는 스프링 환경을 가진다.
 internally: 내부적으로
 batches: 함께묶다.
+enablement :  가능하게함 .
 ```
 
 
