--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -42,7 +42,7 @@ immutable variable: 불변 변수
 the capabilities of servers : 서버의 기능 
 by means of : ~에 의해 
 be used to v : ~하는데 사용되는 
-Having a clos look: 자세히보다
+Having a close look: 자세히보다
 	Having a close look at the code : 코드를 자세히보다
 separate out : 따로따로 나누다
 separate out shapes : 모양
@@ -67,6 +67,8 @@ Subsequent: 이후에
 internally: 내부적으로
 batches: 함께묶다.
 enablement :  가능하게함 .
+so valuable 가장 소중한
+transparently : 분명하게
 ```
 
 
