--- a/영문해석/영단어.md
+++ b/영문해석/영단어.md
@@ -69,6 +69,8 @@ batches: 함께묶다.
 enablement :  가능하게함 .
 so valuable 가장 소중한
 transparently : 분명하게
+The purpose of HandlerMapping is to map a handler method to a URL. That way 
+	>> 핸들러 매핑의 목적은 URL을 Handler method와 매핑 하는 것이다.
 ```
 
 
