1장 스터디내용추가

--- a/Study/컴퓨터구조프로글매ㅣㅇ/1주차/1주차.md
+++ b/Study/컴퓨터구조프로글매ㅣㅇ/1주차/1주차.md
@@ -35,3 +35,101 @@
 #### 불리언 대수 
 -   비트에 대해 사용할 수 있는 연산 규칙의 집합이다. (대수의 뜻은 수에 대한 연산 규칙의 집합을 의미한다.)
     - NOT(논리적 반대),AND(모든 비트가 참일 경우),OR(어느 한 비트라도 참이면 참 결과를 반환한다.),XOR(서로 비트가 다를 경우 참을 반환 한다.) 등을 의미한다.
+
+
+
+#### 정수를 비트로 표현하는 방법
+- 우리는 보통 10진수 체계를 사용한다.  -> 우리의 손가락과 발가락이 10개씩이기 떄문이다.(좀 더 보기 편하다.)
+- 10진수는 오른쪽에서 왼쪽으로 상자가 쌓여가며 각 상자마다 다른 이름을 붙인다.
+    - 123 -> 10^2 * 1 + 10^ 1 * 2 + 10^0*3(백의자리 십의자리 일의자리라는 이름을 붙인다.)
+
+- 비트도 이와 비슷하게 접근할 수 있다.(각자리는 1과0만 표기할 수 있다. 10진수는 각자리를 0~9로 표현할 수 있다.)
+    - 110 -> 2^2* 1 + 2^1 * 1 + 2^0* 0  --> 6 ( 2를 밑으로하는 수체계이다.)
+
+- 2진수에서 가장 오른쪽의 비트를 가장 작은 유효 비트라고 부르고 가장 왼쪽의 비트를 가장 큰 유효비트라고 부른다.
+    - 가장 오른쪽의 비트를 변경하면 2진수의 값이 가장 작게 변경되고 가장 왼쪽 비트를 변경하면 2진수의 값이 가장 크게 변한다.
+    ```Shell
+    1001 -> 9
+    1000-> 8 가장 작게 변경
+    0001 -> 1 가장 크게변경 
+    ```
+
+
+#### 비트의 덧셈
+
+- 비트는 가장 오른쪽 비트에서부터 덧셈을 시작한다.
+    ``bash
+    11
+    10
+    # 1. 1+0
+    # 1+1  
+    # 101 유추
+    ```
+- 덧셈 결과가 우리가 사용할 비트의 개수로 표현할 수 있는 범위를 벗어나면 오버플로가 발생한다.
+
+- 가장 큰 유효비트를 넘어서는 덧셈이 일어나면 오버플로가 발생한다. 발생할 때는 조건코드레지스트(status register)라는 곳에 있는 오버플로 비트에 변화가 생긴다.
+    - 오버플로비트가 가장큰유효 비트를 넘어선 비트값을 받는다 그러면 오버플로가 발생한 것을 확인할 수 있다.
+
+
+
+#### 음수 표현
+
+- 개인적으로 음수표현의 변화가 제일 인상 깊었다.
+- 언어는 문맥과 의미를 통해 작용한다는 의미를 기억해야한다. 비트들을 해석하는 새로운 문맥을 만들 수 있기 떄문이다.
+- 왜 책에서 척하기라는 말을 많이하는지 이해가 되는 부분이여였다. 음수를 표현하는 방법이 되게 여러가지가 있었기 떄문이다.
+
+부호와크기
+- 음수와 양수를 구별하기 위해 부호를 사용
+```
++7 -7
+```
+- 다른 표현방법에 비해 장점이 없어서 잘 사용하지 않는다
+    - 비트들을 구성하려면 비용이 드는데 0 을 표현하는 방법이 2가지이다.
+
+    - 부호와 크기 표현법을 사용하면 XOR과 AND를 통해 덧셈 계산을 사용할 수 가 없다.
+
+1의 보수
+
+- 양수의 모든 비트를 뒤집는 방법
+```
+01 -> 1
+10 -> -1 
+```
+- 0을 두 가지 방식으로 표현하는 방법 존재
+- 순환 올림이 발생(가장 큰 유효 비트쪽에서 올림이 발생하면 그걸 가장 작은 유효 비트로 이동시켜줘야한다,)
+
+2의 보수
+- 어떤 수의 비트를 뒤집고 1을 추가하면 음수를 얻을 수 있다.
+
+- XOR과 AND연산만을 사용하여 나타낼 수 있다. (2의 보수를 사용하는 이유 )
+
+숫자에 대한 인식
+
+- 같은 숫자로 이뤄진 수를 보더라도 문맥에 다라 표현하는 값이 달라질 수 있다는 점을 꼭 염두해야한다.(1의보수 2의보수 부호와크기 표현법등 각각 다르게 표현한다.)
+-
+
+
+#### 비트 그룹의 이름
+- 비트는 너무 작아서 기본 단위로 사용하기에는 유용성이 떨어진다.
+```
+2^10 킬로바이트
+2^20 메가바이트
+2^30 기가바이트
+```
+
+#### 텍스트 표현 
+
+
+- 아스키 코드
+    - 수와 마찬가지로 텍스트를 표현하는 방법의 경우에도 몇 가지 아이디어가 서로 경쟁했다. (승자는 미국- ASCLL코드, 정보 교환을 위한 미국 표준 코드)
+    - 모든 기호에 대해 7비트 수 값을 할당했다. (ex A -> 65)
+
+- 인코딩
+    - 유니코드는 문자 코드에 따라 각기 다른 인코딩을 사용해 이런 문제를 해결한다. 
+
+- 베이스64 인코딩
+    - 3바이트 데이터를 4문자로 표현한다. 3바이트 데이터의 24비트를 네 가지 6비트 덩어리로 나누고 각 덩어리의 6비트값에 출력 가능한 문자를 할당해 표현한다.
+
+- URL 인코딩
+    - URL이라는 문맥에서 몇몇 문자가 특별한 의미를 지니었다. 이런 특별한 의미를 지니는 문자를 리터럴로 사용할 필요가 있다.(리터럴 : 문자그대로라는뜻)
+    - 리터럴그대로 사용하고 싶을 때 퍼센트 인코딩(ex %26)처럼 붙여서 사용한다.
