--- a/Study/컴퓨터구조프로그래밍/2주차/2주차.md
+++ b/Study/컴퓨터구조프로그래밍/2주차/2주차.md
@@ -18,16 +18,69 @@
   - 아날로그와 디지털
     - 아날로그: 연속적인 것을 뜻한다.
       - 아날로그는 연속적인 것이라 좋을 수 있지만. 정밀도문제가 있다. 자의 눈금을 정확히 쉽게 선택할 수가 없다.
+      - 구글위키: 어떤 수치를 길이 각도 또는 전류와 같이 외부적인 원인에 의해 연속적으로 변하는 물리량을 나타내는일
     - 디지털: 이산적인 것을 뜻한다. 
-      
+      - 구글 위키 : 아날로그를 연속적 실수가 아닌 특정한 최소단위를 갖는 이산적인 수치를 이용해 처리하는 방법(임계점 표시)
 
 - 하드웨어에서 크기가 중요한 이유
   - 책에서는 통학과 유사하다고 설명해준다.
     - 자전거를 타고 5km 왕복하는 것과 하드웨어에서 전자가 이동하는 것은 비슷한 상황으로 볼 수 있다. 전자도 여행시간이 최소한으로 설정할 수록 계산이 빠르기 떄문이다.
       - 전자의 여행거리와 에너지가 감소된다. 하지만 
 
-[//]: # (- 하드웨어에 디지털을 사용하는 이유 )
+- 하드웨어에 디지털을 사용하는 이유 
 
-[//]: # (  - 아날로그방식은 정확한 측정을 할 수 가 없다. 연속적인 실수를 나열한다고 해서 정확히 표시할 수 없는게 주변에서 안좋은 영향을 끼치면 정확한 값을 파악하기 어렵다 )
+  - 아날로그방식은 정확한 측정을 할 수 가 없다. 연속적인 실수를 나열한다고 해서 정확히 표시할 수 없는게 주변에서 안좋은 영향을 받으면 값이 정확할 수가 없기 떄문이다.
 
-[//]: # (  - 디지털은 0과1만 존재하기 때문에 주변에 영향)
+  - 디지털은 판정 기준이 있기 떄문에 보다 정확한 측정을 할 수 있다. 
+
+
+
+## 10진 숫자 대신 비트를 사용하는 이유 
+- 컴퓨터는 손가락이 없다.
+  - 우리가 편하다는것이 컴퓨터가 편하게 계산한다는 말은 아니다. 
+- 비용
+  - 하드웨어에서 숫자를 이용하여 하드웨어를 구축하는것 보다 비트를 이용한 하드웨어 10개를 사용하는 것이 경제적으로 이득이기 떄문이다.
+
+## 전기이론(수도배관과의 공통점으로 표시)
+- 물이 흐르는양  = 전기 의 흐름의 양(전류,단위는 암페어)
+- 물에 가해지는 압력 = 전압(단위는 볼트)
+- 수도관에 가해지는 저항 - 도체에 가해지는 저항 (단위는 옴)
+
+## 비트를 처리하기 위한 하드웨어
+
+```
+하드웨어는 비트를 사용하여 만드는것이 유리하기 떄문에 비트를 사용하여 만든다. 이렇게 만든 하드의 역사를 간략적으로 정리해놓왔다.
+하드웨어가 변하는 중요한 요인은 회로를 더 작고 더 저렴하게 만들어지면 
+크게크게 변화가 일어나는 것 같다.
+```
+
+- 릴레이
+  - 스위치를 움직이기 위해 전자석을 사용하는 장치
+    - 전자석: 전자기석은 전류가 흐르는 동안 자기장이 형성되는 자석이다.
+
+- 진공관
+  - 물체를 충분히 가열하여 전자가 튀어나오는 열전자 방출 이라는 현상을 이용하는 진공관이 만들어졌다.
+
+
+- 트랜지스터
+  - 전송 저항(transfer resistor)라는 말을 줄인말이다.
+  - 반도체 라는 특성을 사용
+    - 반도체: 도체와 부도체 사이를 오갈 수 있는 물질
+
+  - 한방향으로 흐른다. 
+
+- 집적 회로
+  - 집적 회로 또는 모놀리식 집적회로, IC칩, 마이크로칩, IC는 반도체에 만든 전자회로의 집합을 말한다. 집적회로는 여러 독립된 요소를 집적해서 하나의 칩으로 만든 것
+
+
+## 논리게이트
+- 논리 연산을 수행하는 회로가 미리 들어가 있다.
+- IC를 선으로 연결해 복잡한 회로를 쉽게 만들 수 있다.
+
+- 가장 단순한 회로는 NAND, NOR이다 (이부분을 잘모르겠다..)
+
+
+## 이력현상을 활용한 잡음 내성
+- 글리치(작은 오류) 판정 기준이 이력에 따라 달라진다는 뜻
+- 입력 신호가 두 문턱값 중 하나를 넘어간 경우 반대쪽 문턱값을 지나가며 출력이 반전되려면 값이 상당히 많이 변해야 한다는 뜻이다.
+
