--- a/Study/컴퓨터구조프로그래밍/3주차/3주차.md
+++ b/Study/컴퓨터구조프로그래밍/3주차/3주차.md
@@ -21,5 +21,47 @@
 
 
 ## 래치
+- 클럭 입력을 갖지 않는 2진 기억소자 (쌍안정회로)
+- `기억` 및 `귀환` 요소가 있으므로, 플립플롭과 유사하나, `클럭` 입력이 없으므로, 비동기식 순서논리회로 소자 임
 
-- 
+- 특징
+  - 2개 용도 가능
+  . 입력되는 펄스를 래치(걸어잠금,latch up,latching)하거나,
+  . 기억/저장이 가능
+  - 통상, 짝수 개의 반전형 소자들이 맞물리어 구성 (아래 3.항 래치의 종류 참조)
+
+- S-R 래치
+  - S(set) 및 R(reset)으로된 2개의 입력과 Q 및 Q′으로된 2개의 출력으로 구현
+- ![img.png](img.png)
+
+## 플립플롭
+
+- 에지: 논리 수준이 한 수준에서 다른 수준으로 전이되는 중간에 데이터를 잡아 내는 것
+- 에지에 의해 데이터 변화가 촉발되는 래치를 플립플롭 이라고 부른다.
+
+- D플립플롭
+  - 양의 에지에 의해 변화가 촉발되는 플립플롭
+  - 0에서 1로 바뀌는 순간에 플립플롭의 출력이 변경된다.
+  - 플립플롭의 동작이 이해가 안간다. 입력을 어덯게 설정하는거지?(143p)
+
+## 카운터
+
+- 미리 정해진 상태천이 순서를 순환하면서 클럭 펄스의 수를 카운트하는 소자(장치)이다.
+- 플립플롭을 으용한 회루로써 1,2,3,순서대로 수를 센다.
+
+## 레지스터
+
+- 클록을 공유하는 여러 D플립플롭을 한 패키지에 넣은 것.
+- 레지스터란 워드 단위의 데이터를 저장하거나 처리하기 위해 다수의 플립플롭을 연결하여 소수의 게이트로 제어하는 소규모 단위의 기억 장치로 데이터나 명령을 일시적으로 저장하거나 이동시키는 역할을 수행하며 추가적으로 직렬 혹은 병렬로 입. 출력 동작을 수행한다.
+- D플립플롭을 사용하면 값을 쉽게 기억할 수 있는데. 이걸 이용하여 여러가지의 수를 기억하여 계산를 할 수 있다. 
+
+## 메모리조직과 주소 지정
+ 
+- 메모리는 디코더와 레지스터들과 실렉터를 이용하여 구현한다. 
+
+```
+  레지스터들에게 번호를 부여하여 주소를 갖게한 뒤, 디코더를 이용하여 레지스터의 주소로 갈 수 있도록 한다.
+  이렇게 갈 수 있도록 처리를하면 레지스터의 입력으로 들어오게 된 뒤, 출력을 하게 되는데
+  출력을 선택하는 방법은 실렉터를 이용하여 출력을 선택할 수 있다.
+  
+```
